# serializer version: 1
# name: TestTransformationMethod.test_to_occurrence[False-event]
  '''
  ,event_type,provider,__OCCURRENCE__
  0,CONSULTATION,GENERAL_PRACTITIONER,4
  1,CONSULTATION,LABORATORY,2
  2,CONSULTATION,NURSE,2
  3,CONSULTATION,RADIOLOGIST,7
  4,CONSULTATION,SPECIALIST,1
  5,EMERGENCY,GENERAL_PRACTITIONER,6
  6,EMERGENCY,LABORATORY,2
  7,EMERGENCY,NURSE,7
  8,EMERGENCY,RADIOLOGIST,1
  9,EMERGENCY,SPECIALIST,2
  10,EXAM,GENERAL_PRACTITIONER,2
  11,EXAM,LABORATORY,2
  12,EXAM,NURSE,2
  13,EXAM,RADIOLOGIST,5
  14,EXAM,SPECIALIST,3
  15,FOLLOW_UP,GENERAL_PRACTITIONER,5
  16,FOLLOW_UP,LABORATORY,3
  17,FOLLOW_UP,NURSE,7
  18,FOLLOW_UP,RADIOLOGIST,4
  19,FOLLOW_UP,SPECIALIST,5
  20,VACCINATION,GENERAL_PRACTITIONER,3
  21,VACCINATION,LABORATORY,5
  22,VACCINATION,NURSE,3
  23,VACCINATION,RADIOLOGIST,5
  24,VACCINATION,SPECIALIST,7
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[False-interval]
  '''
  ,medication,administration_route,dosage,__OCCURRENCE__
  0,ANTIBIOTIC,CUTANEOUS,2,1
  1,ANTIBIOTIC,CUTANEOUS,3,2
  2,ANTIBIOTIC,INHALATION,1,1
  3,ANTIBIOTIC,INHALATION,3,1
  4,ANTIBIOTIC,INTRAMUSCULAR,1,1
  5,ANTIBIOTIC,INTRAVENOUS,3,1
  6,ANTIBIOTIC,ORAL,1,1
  7,ANTIBIOTIC,ORAL,2,2
  8,ANTIBIOTIC,ORAL,3,3
  9,ANTICOAGULANT,CUTANEOUS,1,1
  10,ANTICOAGULANT,INHALATION,2,1
  11,ANTICOAGULANT,INTRAMUSCULAR,2,3
  12,ANTICOAGULANT,INTRAMUSCULAR,3,1
  13,ANTICOAGULANT,INTRAVENOUS,2,1
  14,ANTICOAGULANT,INTRAVENOUS,3,1
  15,ANTICOAGULANT,ORAL,1,1
  16,ANTIHYPERTENSIVE,INHALATION,2,4
  17,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,1
  18,ANTIHYPERTENSIVE,INTRAVENOUS,1,1
  19,ANTIHYPERTENSIVE,INTRAVENOUS,3,1
  20,ANTIHYPERTENSIVE,ORAL,2,1
  21,CORTICOSTEROID,CUTANEOUS,1,1
  22,CORTICOSTEROID,CUTANEOUS,2,1
  23,CORTICOSTEROID,INHALATION,1,1
  24,CORTICOSTEROID,INHALATION,2,1
  25,CORTICOSTEROID,INHALATION,3,1
  26,CORTICOSTEROID,INTRAVENOUS,2,1
  27,CORTICOSTEROID,INTRAVENOUS,3,1
  28,CORTICOSTEROID,ORAL,3,1
  29,PAIN_RELIEVER,CUTANEOUS,3,1
  30,PAIN_RELIEVER,INHALATION,2,1
  31,PAIN_RELIEVER,INHALATION,3,1
  32,PAIN_RELIEVER,INTRAMUSCULAR,2,1
  33,PAIN_RELIEVER,INTRAMUSCULAR,3,1
  34,PAIN_RELIEVER,INTRAVENOUS,1,2
  35,PAIN_RELIEVER,ORAL,2,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[False-state]
  '''
  ,health_state,condition,__OCCURRENCE__
  0,CHRONIC_MONITORING,CARDIAC,1
  1,CHRONIC_MONITORING,DIGESTIVE,1
  2,CHRONIC_MONITORING,NEUROLOGICAL,3
  3,CONVALESCENCE,CARDIAC,1
  4,CONVALESCENCE,DIGESTIVE,3
  5,CONVALESCENCE,RESPIRATORY,1
  6,HEALTHY,CARDIAC,1
  7,HEALTHY,DIGESTIVE,3
  8,HEALTHY,RESPIRATORY,1
  9,REMISSION,CARDIAC,1
  10,REMISSION,DIGESTIVE,2
  11,REMISSION,RESPIRATORY,1
  12,TREATMENT,DIGESTIVE,1
  13,TREATMENT,NEUROLOGICAL,1
  14,TREATMENT,RESPIRATORY,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-event]
  '''
  ,patient_id,event_type,provider,__OCCURRENCE__
  0,1,CONSULTATION,NURSE,1
  1,1,EMERGENCY,NURSE,1
  2,1,EXAM,NURSE,1
  3,1,FOLLOW_UP,RADIOLOGIST,2
  4,1,VACCINATION,LABORATORY,1
  5,1,VACCINATION,SPECIALIST,1
  6,2,EMERGENCY,GENERAL_PRACTITIONER,1
  7,2,EMERGENCY,RADIOLOGIST,1
  8,2,EXAM,LABORATORY,1
  9,2,EXAM,RADIOLOGIST,2
  10,2,FOLLOW_UP,GENERAL_PRACTITIONER,1
  11,2,FOLLOW_UP,NURSE,1
  12,2,FOLLOW_UP,SPECIALIST,2
  13,2,VACCINATION,GENERAL_PRACTITIONER,1
  14,2,VACCINATION,RADIOLOGIST,1
  15,2,VACCINATION,SPECIALIST,3
  16,3,CONSULTATION,RADIOLOGIST,2
  17,3,EMERGENCY,LABORATORY,1
  18,3,EMERGENCY,NURSE,2
  19,3,EXAM,GENERAL_PRACTITIONER,1
  20,3,FOLLOW_UP,LABORATORY,1
  21,3,FOLLOW_UP,NURSE,2
  22,3,FOLLOW_UP,SPECIALIST,1
  23,3,VACCINATION,RADIOLOGIST,1
  24,4,CONSULTATION,RADIOLOGIST,1
  25,4,EMERGENCY,GENERAL_PRACTITIONER,1
  26,4,EMERGENCY,NURSE,1
  27,4,EXAM,SPECIALIST,1
  28,4,FOLLOW_UP,GENERAL_PRACTITIONER,1
  29,4,FOLLOW_UP,NURSE,1
  30,4,VACCINATION,LABORATORY,2
  31,4,VACCINATION,RADIOLOGIST,2
  32,4,VACCINATION,SPECIALIST,1
  33,5,CONSULTATION,GENERAL_PRACTITIONER,2
  34,5,EMERGENCY,GENERAL_PRACTITIONER,3
  35,5,EMERGENCY,NURSE,1
  36,5,EXAM,LABORATORY,1
  37,5,EXAM,RADIOLOGIST,3
  38,5,FOLLOW_UP,GENERAL_PRACTITIONER,1
  39,5,FOLLOW_UP,RADIOLOGIST,1
  40,5,VACCINATION,SPECIALIST,1
  41,6,CONSULTATION,RADIOLOGIST,1
  42,6,CONSULTATION,SPECIALIST,1
  43,6,EMERGENCY,GENERAL_PRACTITIONER,1
  44,6,EMERGENCY,LABORATORY,1
  45,6,EMERGENCY,NURSE,2
  46,6,VACCINATION,GENERAL_PRACTITIONER,2
  47,6,VACCINATION,LABORATORY,1
  48,6,VACCINATION,RADIOLOGIST,1
  49,6,VACCINATION,SPECIALIST,1
  50,7,CONSULTATION,NURSE,1
  51,7,CONSULTATION,RADIOLOGIST,2
  52,7,FOLLOW_UP,GENERAL_PRACTITIONER,1
  53,7,FOLLOW_UP,SPECIALIST,1
  54,7,VACCINATION,NURSE,1
  55,8,CONSULTATION,LABORATORY,1
  56,8,FOLLOW_UP,GENERAL_PRACTITIONER,1
  57,8,FOLLOW_UP,NURSE,1
  58,8,VACCINATION,NURSE,1
  59,9,CONSULTATION,GENERAL_PRACTITIONER,1
  60,9,CONSULTATION,RADIOLOGIST,1
  61,9,FOLLOW_UP,LABORATORY,2
  62,9,FOLLOW_UP,NURSE,2
  63,9,VACCINATION,LABORATORY,1
  64,10,CONSULTATION,GENERAL_PRACTITIONER,1
  65,10,CONSULTATION,LABORATORY,1
  66,10,EMERGENCY,SPECIALIST,2
  67,10,EXAM,GENERAL_PRACTITIONER,1
  68,10,EXAM,NURSE,1
  69,10,EXAM,SPECIALIST,2
  70,10,FOLLOW_UP,RADIOLOGIST,1
  71,10,FOLLOW_UP,SPECIALIST,1
  72,10,VACCINATION,NURSE,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__OCCURRENCE__
  0,1,ANTIBIOTIC,ORAL,2,1
  1,1,ANTICOAGULANT,CUTANEOUS,1,1
  2,1,ANTICOAGULANT,INTRAVENOUS,3,1
  3,1,ANTIHYPERTENSIVE,INTRAVENOUS,3,1
  4,2,ANTIBIOTIC,CUTANEOUS,3,1
  5,2,ANTIBIOTIC,INHALATION,1,1
  6,2,ANTIBIOTIC,ORAL,2,1
  7,2,ANTIHYPERTENSIVE,INHALATION,2,1
  8,2,PAIN_RELIEVER,INTRAVENOUS,1,1
  9,3,ANTIBIOTIC,INHALATION,3,1
  10,3,ANTIHYPERTENSIVE,ORAL,2,1
  11,3,PAIN_RELIEVER,ORAL,2,1
  12,4,ANTIBIOTIC,ORAL,3,1
  13,4,ANTICOAGULANT,INTRAMUSCULAR,2,1
  14,4,ANTICOAGULANT,ORAL,1,1
  15,4,CORTICOSTEROID,INHALATION,3,1
  16,4,CORTICOSTEROID,INTRAVENOUS,2,1
  17,4,PAIN_RELIEVER,INTRAMUSCULAR,3,1
  18,5,ANTIBIOTIC,CUTANEOUS,2,1
  19,5,ANTIHYPERTENSIVE,INHALATION,2,1
  20,5,ANTIHYPERTENSIVE,INTRAVENOUS,1,1
  21,5,CORTICOSTEROID,CUTANEOUS,2,1
  22,5,PAIN_RELIEVER,INTRAMUSCULAR,2,1
  23,6,ANTIBIOTIC,INTRAMUSCULAR,1,1
  24,6,ANTIHYPERTENSIVE,INHALATION,2,1
  25,6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,1
  26,6,CORTICOSTEROID,CUTANEOUS,1,1
  27,6,CORTICOSTEROID,INHALATION,1,1
  28,6,CORTICOSTEROID,INHALATION,2,1
  29,6,CORTICOSTEROID,INTRAVENOUS,3,1
  30,7,ANTICOAGULANT,INTRAMUSCULAR,2,1
  31,7,PAIN_RELIEVER,INHALATION,3,1
  32,8,ANTIBIOTIC,ORAL,3,2
  33,8,ANTICOAGULANT,INHALATION,2,1
  34,8,CORTICOSTEROID,ORAL,3,1
  35,8,PAIN_RELIEVER,CUTANEOUS,3,1
  36,8,PAIN_RELIEVER,INHALATION,2,1
  37,9,ANTIBIOTIC,CUTANEOUS,3,1
  38,9,ANTIBIOTIC,ORAL,1,1
  39,9,ANTICOAGULANT,INTRAMUSCULAR,3,1
  40,9,PAIN_RELIEVER,INTRAVENOUS,1,1
  41,10,ANTIBIOTIC,INTRAVENOUS,3,1
  42,10,ANTICOAGULANT,INTRAMUSCULAR,2,1
  43,10,ANTICOAGULANT,INTRAVENOUS,2,1
  44,10,ANTIHYPERTENSIVE,INHALATION,2,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence[True-state]
  '''
  ,patient_id,health_state,condition,__OCCURRENCE__
  0,1,HEALTHY,DIGESTIVE,1
  1,2,CHRONIC_MONITORING,CARDIAC,1
  2,2,HEALTHY,CARDIAC,1
  3,3,CHRONIC_MONITORING,NEUROLOGICAL,1
  4,3,CONVALESCENCE,CARDIAC,1
  5,3,REMISSION,CARDIAC,1
  6,4,CHRONIC_MONITORING,NEUROLOGICAL,1
  7,4,REMISSION,DIGESTIVE,1
  8,5,CHRONIC_MONITORING,DIGESTIVE,1
  9,5,CONVALESCENCE,DIGESTIVE,1
  10,6,CONVALESCENCE,DIGESTIVE,1
  11,6,REMISSION,DIGESTIVE,1
  12,6,TREATMENT,DIGESTIVE,1
  13,6,TREATMENT,RESPIRATORY,1
  14,7,HEALTHY,DIGESTIVE,1
  15,7,HEALTHY,RESPIRATORY,1
  16,7,REMISSION,RESPIRATORY,1
  17,7,TREATMENT,NEUROLOGICAL,1
  18,8,CONVALESCENCE,RESPIRATORY,1
  19,9,CONVALESCENCE,DIGESTIVE,1
  20,10,CHRONIC_MONITORING,NEUROLOGICAL,1
  21,10,HEALTHY,DIGESTIVE,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-event]
  '''
  ,event_type,provider,__FREQUENCY__
  0,CONSULTATION,GENERAL_PRACTITIONER,0.042105263157894736
  1,CONSULTATION,LABORATORY,0.021052631578947368
  2,CONSULTATION,NURSE,0.021052631578947368
  3,CONSULTATION,RADIOLOGIST,0.07368421052631578
  4,CONSULTATION,SPECIALIST,0.010526315789473684
  5,EMERGENCY,GENERAL_PRACTITIONER,0.06315789473684211
  6,EMERGENCY,LABORATORY,0.021052631578947368
  7,EMERGENCY,NURSE,0.07368421052631578
  8,EMERGENCY,RADIOLOGIST,0.010526315789473684
  9,EMERGENCY,SPECIALIST,0.021052631578947368
  10,EXAM,GENERAL_PRACTITIONER,0.021052631578947368
  11,EXAM,LABORATORY,0.021052631578947368
  12,EXAM,NURSE,0.021052631578947368
  13,EXAM,RADIOLOGIST,0.05263157894736842
  14,EXAM,SPECIALIST,0.031578947368421054
  15,FOLLOW_UP,GENERAL_PRACTITIONER,0.05263157894736842
  16,FOLLOW_UP,LABORATORY,0.031578947368421054
  17,FOLLOW_UP,NURSE,0.07368421052631578
  18,FOLLOW_UP,RADIOLOGIST,0.042105263157894736
  19,FOLLOW_UP,SPECIALIST,0.05263157894736842
  20,VACCINATION,GENERAL_PRACTITIONER,0.031578947368421054
  21,VACCINATION,LABORATORY,0.05263157894736842
  22,VACCINATION,NURSE,0.031578947368421054
  23,VACCINATION,RADIOLOGIST,0.05263157894736842
  24,VACCINATION,SPECIALIST,0.07368421052631578
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-interval]
  '''
  ,medication,administration_route,dosage,__FREQUENCY__
  0,ANTIBIOTIC,CUTANEOUS,2,0.021739130434782608
  1,ANTIBIOTIC,CUTANEOUS,3,0.043478260869565216
  2,ANTIBIOTIC,INHALATION,1,0.021739130434782608
  3,ANTIBIOTIC,INHALATION,3,0.021739130434782608
  4,ANTIBIOTIC,INTRAMUSCULAR,1,0.021739130434782608
  5,ANTIBIOTIC,INTRAVENOUS,3,0.021739130434782608
  6,ANTIBIOTIC,ORAL,1,0.021739130434782608
  7,ANTIBIOTIC,ORAL,2,0.043478260869565216
  8,ANTIBIOTIC,ORAL,3,0.06521739130434782
  9,ANTICOAGULANT,CUTANEOUS,1,0.021739130434782608
  10,ANTICOAGULANT,INHALATION,2,0.021739130434782608
  11,ANTICOAGULANT,INTRAMUSCULAR,2,0.06521739130434782
  12,ANTICOAGULANT,INTRAMUSCULAR,3,0.021739130434782608
  13,ANTICOAGULANT,INTRAVENOUS,2,0.021739130434782608
  14,ANTICOAGULANT,INTRAVENOUS,3,0.021739130434782608
  15,ANTICOAGULANT,ORAL,1,0.021739130434782608
  16,ANTIHYPERTENSIVE,INHALATION,2,0.08695652173913043
  17,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,0.021739130434782608
  18,ANTIHYPERTENSIVE,INTRAVENOUS,1,0.021739130434782608
  19,ANTIHYPERTENSIVE,INTRAVENOUS,3,0.021739130434782608
  20,ANTIHYPERTENSIVE,ORAL,2,0.021739130434782608
  21,CORTICOSTEROID,CUTANEOUS,1,0.021739130434782608
  22,CORTICOSTEROID,CUTANEOUS,2,0.021739130434782608
  23,CORTICOSTEROID,INHALATION,1,0.021739130434782608
  24,CORTICOSTEROID,INHALATION,2,0.021739130434782608
  25,CORTICOSTEROID,INHALATION,3,0.021739130434782608
  26,CORTICOSTEROID,INTRAVENOUS,2,0.021739130434782608
  27,CORTICOSTEROID,INTRAVENOUS,3,0.021739130434782608
  28,CORTICOSTEROID,ORAL,3,0.021739130434782608
  29,PAIN_RELIEVER,CUTANEOUS,3,0.021739130434782608
  30,PAIN_RELIEVER,INHALATION,2,0.021739130434782608
  31,PAIN_RELIEVER,INHALATION,3,0.021739130434782608
  32,PAIN_RELIEVER,INTRAMUSCULAR,2,0.021739130434782608
  33,PAIN_RELIEVER,INTRAMUSCULAR,3,0.021739130434782608
  34,PAIN_RELIEVER,INTRAVENOUS,1,0.043478260869565216
  35,PAIN_RELIEVER,ORAL,2,0.021739130434782608
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[False-state]
  '''
  ,health_state,condition,__FREQUENCY__
  0,CHRONIC_MONITORING,CARDIAC,0.045454545454545456
  1,CHRONIC_MONITORING,DIGESTIVE,0.045454545454545456
  2,CHRONIC_MONITORING,NEUROLOGICAL,0.13636363636363635
  3,CONVALESCENCE,CARDIAC,0.045454545454545456
  4,CONVALESCENCE,DIGESTIVE,0.13636363636363635
  5,CONVALESCENCE,RESPIRATORY,0.045454545454545456
  6,HEALTHY,CARDIAC,0.045454545454545456
  7,HEALTHY,DIGESTIVE,0.13636363636363635
  8,HEALTHY,RESPIRATORY,0.045454545454545456
  9,REMISSION,CARDIAC,0.045454545454545456
  10,REMISSION,DIGESTIVE,0.09090909090909091
  11,REMISSION,RESPIRATORY,0.045454545454545456
  12,TREATMENT,DIGESTIVE,0.045454545454545456
  13,TREATMENT,NEUROLOGICAL,0.045454545454545456
  14,TREATMENT,RESPIRATORY,0.045454545454545456
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-event]
  '''
  ,patient_id,event_type,provider,__FREQUENCY__
  0,1,CONSULTATION,NURSE,0.14285714285714285
  1,1,EMERGENCY,NURSE,0.14285714285714285
  2,1,EXAM,NURSE,0.14285714285714285
  3,1,FOLLOW_UP,RADIOLOGIST,0.2857142857142857
  4,1,VACCINATION,LABORATORY,0.14285714285714285
  5,1,VACCINATION,SPECIALIST,0.14285714285714285
  6,2,EMERGENCY,GENERAL_PRACTITIONER,0.07142857142857142
  7,2,EMERGENCY,RADIOLOGIST,0.07142857142857142
  8,2,EXAM,LABORATORY,0.07142857142857142
  9,2,EXAM,RADIOLOGIST,0.14285714285714285
  10,2,FOLLOW_UP,GENERAL_PRACTITIONER,0.07142857142857142
  11,2,FOLLOW_UP,NURSE,0.07142857142857142
  12,2,FOLLOW_UP,SPECIALIST,0.14285714285714285
  13,2,VACCINATION,GENERAL_PRACTITIONER,0.07142857142857142
  14,2,VACCINATION,RADIOLOGIST,0.07142857142857142
  15,2,VACCINATION,SPECIALIST,0.21428571428571427
  16,3,CONSULTATION,RADIOLOGIST,0.18181818181818182
  17,3,EMERGENCY,LABORATORY,0.09090909090909091
  18,3,EMERGENCY,NURSE,0.18181818181818182
  19,3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  20,3,FOLLOW_UP,LABORATORY,0.09090909090909091
  21,3,FOLLOW_UP,NURSE,0.18181818181818182
  22,3,FOLLOW_UP,SPECIALIST,0.09090909090909091
  23,3,VACCINATION,RADIOLOGIST,0.09090909090909091
  24,4,CONSULTATION,RADIOLOGIST,0.09090909090909091
  25,4,EMERGENCY,GENERAL_PRACTITIONER,0.09090909090909091
  26,4,EMERGENCY,NURSE,0.09090909090909091
  27,4,EXAM,SPECIALIST,0.09090909090909091
  28,4,FOLLOW_UP,GENERAL_PRACTITIONER,0.09090909090909091
  29,4,FOLLOW_UP,NURSE,0.09090909090909091
  30,4,VACCINATION,LABORATORY,0.18181818181818182
  31,4,VACCINATION,RADIOLOGIST,0.18181818181818182
  32,4,VACCINATION,SPECIALIST,0.09090909090909091
  33,5,CONSULTATION,GENERAL_PRACTITIONER,0.15384615384615385
  34,5,EMERGENCY,GENERAL_PRACTITIONER,0.23076923076923078
  35,5,EMERGENCY,NURSE,0.07692307692307693
  36,5,EXAM,LABORATORY,0.07692307692307693
  37,5,EXAM,RADIOLOGIST,0.23076923076923078
  38,5,FOLLOW_UP,GENERAL_PRACTITIONER,0.07692307692307693
  39,5,FOLLOW_UP,RADIOLOGIST,0.07692307692307693
  40,5,VACCINATION,SPECIALIST,0.07692307692307693
  41,6,CONSULTATION,RADIOLOGIST,0.09090909090909091
  42,6,CONSULTATION,SPECIALIST,0.09090909090909091
  43,6,EMERGENCY,GENERAL_PRACTITIONER,0.09090909090909091
  44,6,EMERGENCY,LABORATORY,0.09090909090909091
  45,6,EMERGENCY,NURSE,0.18181818181818182
  46,6,VACCINATION,GENERAL_PRACTITIONER,0.18181818181818182
  47,6,VACCINATION,LABORATORY,0.09090909090909091
  48,6,VACCINATION,RADIOLOGIST,0.09090909090909091
  49,6,VACCINATION,SPECIALIST,0.09090909090909091
  50,7,CONSULTATION,NURSE,0.16666666666666666
  51,7,CONSULTATION,RADIOLOGIST,0.3333333333333333
  52,7,FOLLOW_UP,GENERAL_PRACTITIONER,0.16666666666666666
  53,7,FOLLOW_UP,SPECIALIST,0.16666666666666666
  54,7,VACCINATION,NURSE,0.16666666666666666
  55,8,CONSULTATION,LABORATORY,0.25
  56,8,FOLLOW_UP,GENERAL_PRACTITIONER,0.25
  57,8,FOLLOW_UP,NURSE,0.25
  58,8,VACCINATION,NURSE,0.25
  59,9,CONSULTATION,GENERAL_PRACTITIONER,0.14285714285714285
  60,9,CONSULTATION,RADIOLOGIST,0.14285714285714285
  61,9,FOLLOW_UP,LABORATORY,0.2857142857142857
  62,9,FOLLOW_UP,NURSE,0.2857142857142857
  63,9,VACCINATION,LABORATORY,0.14285714285714285
  64,10,CONSULTATION,GENERAL_PRACTITIONER,0.09090909090909091
  65,10,CONSULTATION,LABORATORY,0.09090909090909091
  66,10,EMERGENCY,SPECIALIST,0.18181818181818182
  67,10,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  68,10,EXAM,NURSE,0.09090909090909091
  69,10,EXAM,SPECIALIST,0.18181818181818182
  70,10,FOLLOW_UP,RADIOLOGIST,0.09090909090909091
  71,10,FOLLOW_UP,SPECIALIST,0.09090909090909091
  72,10,VACCINATION,NURSE,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__FREQUENCY__
  0,1,ANTIBIOTIC,ORAL,2,0.25
  1,1,ANTICOAGULANT,CUTANEOUS,1,0.25
  2,1,ANTICOAGULANT,INTRAVENOUS,3,0.25
  3,1,ANTIHYPERTENSIVE,INTRAVENOUS,3,0.25
  4,2,ANTIBIOTIC,CUTANEOUS,3,0.2
  5,2,ANTIBIOTIC,INHALATION,1,0.2
  6,2,ANTIBIOTIC,ORAL,2,0.2
  7,2,ANTIHYPERTENSIVE,INHALATION,2,0.2
  8,2,PAIN_RELIEVER,INTRAVENOUS,1,0.2
  9,3,ANTIBIOTIC,INHALATION,3,0.3333333333333333
  10,3,ANTIHYPERTENSIVE,ORAL,2,0.3333333333333333
  11,3,PAIN_RELIEVER,ORAL,2,0.3333333333333333
  12,4,ANTIBIOTIC,ORAL,3,0.16666666666666666
  13,4,ANTICOAGULANT,INTRAMUSCULAR,2,0.16666666666666666
  14,4,ANTICOAGULANT,ORAL,1,0.16666666666666666
  15,4,CORTICOSTEROID,INHALATION,3,0.16666666666666666
  16,4,CORTICOSTEROID,INTRAVENOUS,2,0.16666666666666666
  17,4,PAIN_RELIEVER,INTRAMUSCULAR,3,0.16666666666666666
  18,5,ANTIBIOTIC,CUTANEOUS,2,0.2
  19,5,ANTIHYPERTENSIVE,INHALATION,2,0.2
  20,5,ANTIHYPERTENSIVE,INTRAVENOUS,1,0.2
  21,5,CORTICOSTEROID,CUTANEOUS,2,0.2
  22,5,PAIN_RELIEVER,INTRAMUSCULAR,2,0.2
  23,6,ANTIBIOTIC,INTRAMUSCULAR,1,0.14285714285714285
  24,6,ANTIHYPERTENSIVE,INHALATION,2,0.14285714285714285
  25,6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,0.14285714285714285
  26,6,CORTICOSTEROID,CUTANEOUS,1,0.14285714285714285
  27,6,CORTICOSTEROID,INHALATION,1,0.14285714285714285
  28,6,CORTICOSTEROID,INHALATION,2,0.14285714285714285
  29,6,CORTICOSTEROID,INTRAVENOUS,3,0.14285714285714285
  30,7,ANTICOAGULANT,INTRAMUSCULAR,2,0.5
  31,7,PAIN_RELIEVER,INHALATION,3,0.5
  32,8,ANTIBIOTIC,ORAL,3,0.3333333333333333
  33,8,ANTICOAGULANT,INHALATION,2,0.16666666666666666
  34,8,CORTICOSTEROID,ORAL,3,0.16666666666666666
  35,8,PAIN_RELIEVER,CUTANEOUS,3,0.16666666666666666
  36,8,PAIN_RELIEVER,INHALATION,2,0.16666666666666666
  37,9,ANTIBIOTIC,CUTANEOUS,3,0.25
  38,9,ANTIBIOTIC,ORAL,1,0.25
  39,9,ANTICOAGULANT,INTRAMUSCULAR,3,0.25
  40,9,PAIN_RELIEVER,INTRAVENOUS,1,0.25
  41,10,ANTIBIOTIC,INTRAVENOUS,3,0.25
  42,10,ANTICOAGULANT,INTRAMUSCULAR,2,0.25
  43,10,ANTICOAGULANT,INTRAVENOUS,2,0.25
  44,10,ANTIHYPERTENSIVE,INHALATION,2,0.25
  
  '''
# ---
# name: TestTransformationMethod.test_to_occurrence_frequency[True-state]
  '''
  ,patient_id,health_state,condition,__FREQUENCY__
  0,1,HEALTHY,DIGESTIVE,1.0
  1,2,CHRONIC_MONITORING,CARDIAC,0.5
  2,2,HEALTHY,CARDIAC,0.5
  3,3,CHRONIC_MONITORING,NEUROLOGICAL,0.3333333333333333
  4,3,CONVALESCENCE,CARDIAC,0.3333333333333333
  5,3,REMISSION,CARDIAC,0.3333333333333333
  6,4,CHRONIC_MONITORING,NEUROLOGICAL,0.5
  7,4,REMISSION,DIGESTIVE,0.5
  8,5,CHRONIC_MONITORING,DIGESTIVE,0.5
  9,5,CONVALESCENCE,DIGESTIVE,0.5
  10,6,CONVALESCENCE,DIGESTIVE,0.25
  11,6,REMISSION,DIGESTIVE,0.25
  12,6,TREATMENT,DIGESTIVE,0.25
  13,6,TREATMENT,RESPIRATORY,0.25
  14,7,HEALTHY,DIGESTIVE,0.25
  15,7,HEALTHY,RESPIRATORY,0.25
  16,7,REMISSION,RESPIRATORY,0.25
  17,7,TREATMENT,NEUROLOGICAL,0.25
  18,8,CONVALESCENCE,RESPIRATORY,1.0
  19,9,CONVALESCENCE,DIGESTIVE,1.0
  20,10,CHRONIC_MONITORING,NEUROLOGICAL,0.5
  21,10,HEALTHY,DIGESTIVE,0.5
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[event]
  '''
  patient_id,event_type,provider,__RELATIVE_RANK__
  1,EXAM,NURSE,0
  1,FOLLOW_UP,RADIOLOGIST,1
  1,EXAM,,2
  1,FOLLOW_UP,RADIOLOGIST,3
  1,VACCINATION,,4
  1,VACCINATION,LABORATORY,5
  1,EMERGENCY,NURSE,6
  1,VACCINATION,SPECIALIST,7
  1,CONSULTATION,NURSE,8
  1,EMERGENCY,,9
  1,EMERGENCY,,10
  2,VACCINATION,SPECIALIST,0
  2,EXAM,RADIOLOGIST,1
  2,VACCINATION,GENERAL_PRACTITIONER,2
  2,VACCINATION,SPECIALIST,3
  2,FOLLOW_UP,NURSE,4
  2,FOLLOW_UP,GENERAL_PRACTITIONER,5
  2,EXAM,RADIOLOGIST,6
  2,FOLLOW_UP,,7
  2,VACCINATION,,8
  2,VACCINATION,SPECIALIST,9
  2,EMERGENCY,GENERAL_PRACTITIONER,10
  2,EXAM,LABORATORY,11
  2,EMERGENCY,RADIOLOGIST,12
  2,FOLLOW_UP,SPECIALIST,13
  2,FOLLOW_UP,SPECIALIST,14
  2,VACCINATION,RADIOLOGIST,15
  3,CONSULTATION,RADIOLOGIST,0
  3,FOLLOW_UP,NURSE,1
  3,FOLLOW_UP,LABORATORY,2
  3,CONSULTATION,,3
  3,EMERGENCY,,4
  3,EMERGENCY,NURSE,5
  3,EMERGENCY,NURSE,6
  3,FOLLOW_UP,NURSE,7
  3,EXAM,GENERAL_PRACTITIONER,8
  3,VACCINATION,RADIOLOGIST,9
  3,FOLLOW_UP,SPECIALIST,10
  3,EMERGENCY,LABORATORY,11
  3,CONSULTATION,RADIOLOGIST,12
  4,VACCINATION,LABORATORY,0
  4,VACCINATION,SPECIALIST,1
  4,VACCINATION,LABORATORY,2
  4,VACCINATION,RADIOLOGIST,3
  4,VACCINATION,RADIOLOGIST,4
  4,EMERGENCY,NURSE,5
  4,FOLLOW_UP,GENERAL_PRACTITIONER,6
  4,CONSULTATION,RADIOLOGIST,7
  4,EXAM,SPECIALIST,8
  4,FOLLOW_UP,NURSE,9
  4,EMERGENCY,GENERAL_PRACTITIONER,10
  5,EXAM,,0
  5,VACCINATION,SPECIALIST,1
  5,FOLLOW_UP,,2
  5,EMERGENCY,,3
  5,EMERGENCY,GENERAL_PRACTITIONER,4
  5,FOLLOW_UP,GENERAL_PRACTITIONER,5
  5,EXAM,LABORATORY,6
  5,FOLLOW_UP,,7
  5,EMERGENCY,GENERAL_PRACTITIONER,8
  5,EXAM,RADIOLOGIST,9
  5,CONSULTATION,GENERAL_PRACTITIONER,10
  5,EMERGENCY,GENERAL_PRACTITIONER,11
  5,CONSULTATION,GENERAL_PRACTITIONER,12
  5,EMERGENCY,NURSE,13
  5,FOLLOW_UP,RADIOLOGIST,14
  5,CONSULTATION,,15
  5,EXAM,RADIOLOGIST,16
  5,EXAM,RADIOLOGIST,17
  6,EMERGENCY,GENERAL_PRACTITIONER,0
  6,CONSULTATION,SPECIALIST,1
  6,CONSULTATION,RADIOLOGIST,2
  6,EMERGENCY,LABORATORY,3
  6,EXAM,,4
  6,VACCINATION,GENERAL_PRACTITIONER,5
  6,EXAM,,6
  6,EMERGENCY,NURSE,7
  6,VACCINATION,RADIOLOGIST,8
  6,VACCINATION,SPECIALIST,9
  6,VACCINATION,GENERAL_PRACTITIONER,10
  6,VACCINATION,LABORATORY,11
  6,EMERGENCY,NURSE,12
  7,CONSULTATION,RADIOLOGIST,0
  7,VACCINATION,NURSE,1
  7,CONSULTATION,NURSE,2
  7,CONSULTATION,RADIOLOGIST,3
  7,FOLLOW_UP,SPECIALIST,4
  7,FOLLOW_UP,GENERAL_PRACTITIONER,5
  7,EXAM,,6
  8,FOLLOW_UP,NURSE,0
  8,CONSULTATION,,1
  8,VACCINATION,,2
  8,FOLLOW_UP,GENERAL_PRACTITIONER,3
  8,EMERGENCY,,4
  8,VACCINATION,NURSE,5
  8,CONSULTATION,LABORATORY,6
  8,EMERGENCY,,7
  9,FOLLOW_UP,NURSE,0
  9,VACCINATION,LABORATORY,1
  9,CONSULTATION,RADIOLOGIST,2
  9,FOLLOW_UP,LABORATORY,3
  9,CONSULTATION,GENERAL_PRACTITIONER,4
  9,FOLLOW_UP,LABORATORY,5
  9,FOLLOW_UP,NURSE,6
  10,FOLLOW_UP,RADIOLOGIST,0
  10,EMERGENCY,SPECIALIST,1
  10,EMERGENCY,SPECIALIST,2
  10,EXAM,NURSE,3
  10,CONSULTATION,GENERAL_PRACTITIONER,4
  10,EXAM,SPECIALIST,5
  10,FOLLOW_UP,SPECIALIST,6
  10,CONSULTATION,LABORATORY,7
  10,EXAM,GENERAL_PRACTITIONER,8
  10,VACCINATION,NURSE,9
  10,EXAM,SPECIALIST,10
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[interval]
  '''
  patient_id,medication,administration_route,dosage,__RELATIVE_RANK__
  1,PAIN_RELIEVER,,2,0
  1,ANTICOAGULANT,CUTANEOUS,1,1
  1,ANTIBIOTIC,ORAL,2,2
  1,ANTIHYPERTENSIVE,INTRAVENOUS,3,3
  1,ANTICOAGULANT,INTRAVENOUS,3,4
  2,ANTIBIOTIC,ORAL,2,0
  2,PAIN_RELIEVER,,1,1
  2,PAIN_RELIEVER,INTRAVENOUS,1,2
  2,ANTIBIOTIC,INHALATION,1,3
  2,ANTIBIOTIC,CUTANEOUS,3,4
  2,ANTIHYPERTENSIVE,INHALATION,2,5
  3,ANTIBIOTIC,INHALATION,3,0
  3,PAIN_RELIEVER,ORAL,2,1
  3,ANTIHYPERTENSIVE,ORAL,2,2
  4,PAIN_RELIEVER,INTRAMUSCULAR,3,0
  4,ANTIBIOTIC,ORAL,3,1
  4,CORTICOSTEROID,INTRAVENOUS,2,2
  4,ANTICOAGULANT,ORAL,1,3
  4,CORTICOSTEROID,INHALATION,3,4
  4,ANTICOAGULANT,INTRAMUSCULAR,2,5
  5,ANTIHYPERTENSIVE,INTRAVENOUS,1,0
  5,CORTICOSTEROID,CUTANEOUS,2,1
  5,ANTIHYPERTENSIVE,INHALATION,2,2
  5,CORTICOSTEROID,,1,3
  5,ANTIBIOTIC,CUTANEOUS,2,4
  5,PAIN_RELIEVER,INTRAMUSCULAR,2,5
  6,CORTICOSTEROID,INHALATION,1,0
  6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,1
  6,ANTIHYPERTENSIVE,INHALATION,2,2
  6,CORTICOSTEROID,CUTANEOUS,1,3
  6,CORTICOSTEROID,INTRAVENOUS,3,4
  6,ANTIBIOTIC,INTRAMUSCULAR,1,5
  6,CORTICOSTEROID,INHALATION,2,6
  7,PAIN_RELIEVER,INHALATION,3,0
  7,ANTIBIOTIC,,3,1
  7,ANTICOAGULANT,INTRAMUSCULAR,2,2
  8,CORTICOSTEROID,,3,0
  8,ANTIBIOTIC,ORAL,3,1
  8,ANTIBIOTIC,ORAL,3,2
  8,PAIN_RELIEVER,INHALATION,2,3
  8,ANTICOAGULANT,INHALATION,2,4
  8,PAIN_RELIEVER,CUTANEOUS,3,5
  8,CORTICOSTEROID,ORAL,3,6
  9,ANTICOAGULANT,INTRAMUSCULAR,3,0
  9,ANTIBIOTIC,ORAL,1,1
  9,PAIN_RELIEVER,INTRAVENOUS,1,2
  9,ANTIBIOTIC,CUTANEOUS,3,3
  10,ANTICOAGULANT,INTRAVENOUS,2,0
  10,ANTIBIOTIC,INTRAVENOUS,3,1
  10,ANTICOAGULANT,INTRAMUSCULAR,2,2
  10,ANTIHYPERTENSIVE,INHALATION,2,3
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_default[state]
  '''
  patient_id,health_state,condition,__RELATIVE_RANK__
  1,HEALTHY,DIGESTIVE,0
  1,HEALTHY,,1
  2,HEALTHY,CARDIAC,0
  2,CHRONIC_MONITORING,CARDIAC,1
  3,CONVALESCENCE,CARDIAC,0
  3,CHRONIC_MONITORING,NEUROLOGICAL,1
  3,REMISSION,CARDIAC,2
  4,CHRONIC_MONITORING,NEUROLOGICAL,0
  4,CONVALESCENCE,,1
  4,REMISSION,DIGESTIVE,2
  4,CONVALESCENCE,,3
  5,CONVALESCENCE,DIGESTIVE,0
  5,CHRONIC_MONITORING,DIGESTIVE,1
  6,REMISSION,DIGESTIVE,0
  6,TREATMENT,RESPIRATORY,1
  6,TREATMENT,DIGESTIVE,2
  6,CONVALESCENCE,DIGESTIVE,3
  7,HEALTHY,RESPIRATORY,0
  7,TREATMENT,NEUROLOGICAL,1
  7,HEALTHY,DIGESTIVE,2
  7,REMISSION,RESPIRATORY,3
  8,CONVALESCENCE,RESPIRATORY,0
  8,TREATMENT,,1
  9,CONVALESCENCE,DIGESTIVE,0
  9,HEALTHY,,1
  10,HEALTHY,DIGESTIVE,0
  10,CHRONIC_MONITORING,NEUROLOGICAL,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[event]
  '''
  patient_id,event_type,provider,__RELATIVE_RANK__
  1,EXAM,NURSE,-3
  1,FOLLOW_UP,RADIOLOGIST,-2
  1,EXAM,,-1
  1,FOLLOW_UP,RADIOLOGIST,0
  1,VACCINATION,,1
  1,VACCINATION,LABORATORY,2
  1,EMERGENCY,NURSE,3
  1,VACCINATION,SPECIALIST,4
  1,CONSULTATION,NURSE,5
  1,EMERGENCY,,6
  1,EMERGENCY,,7
  2,VACCINATION,SPECIALIST,-3
  2,EXAM,RADIOLOGIST,-2
  2,VACCINATION,GENERAL_PRACTITIONER,-1
  2,VACCINATION,SPECIALIST,0
  2,FOLLOW_UP,NURSE,1
  2,FOLLOW_UP,GENERAL_PRACTITIONER,2
  2,EXAM,RADIOLOGIST,3
  2,FOLLOW_UP,,4
  2,VACCINATION,,5
  2,VACCINATION,SPECIALIST,6
  2,EMERGENCY,GENERAL_PRACTITIONER,7
  2,EXAM,LABORATORY,8
  2,EMERGENCY,RADIOLOGIST,9
  2,FOLLOW_UP,SPECIALIST,10
  2,FOLLOW_UP,SPECIALIST,11
  2,VACCINATION,RADIOLOGIST,12
  3,CONSULTATION,RADIOLOGIST,-3
  3,FOLLOW_UP,NURSE,-2
  3,FOLLOW_UP,LABORATORY,-1
  3,CONSULTATION,,0
  3,EMERGENCY,,1
  3,EMERGENCY,NURSE,2
  3,EMERGENCY,NURSE,3
  3,FOLLOW_UP,NURSE,4
  3,EXAM,GENERAL_PRACTITIONER,5
  3,VACCINATION,RADIOLOGIST,6
  3,FOLLOW_UP,SPECIALIST,7
  3,EMERGENCY,LABORATORY,8
  3,CONSULTATION,RADIOLOGIST,9
  4,VACCINATION,LABORATORY,-3
  4,VACCINATION,SPECIALIST,-2
  4,VACCINATION,LABORATORY,-1
  4,VACCINATION,RADIOLOGIST,0
  4,VACCINATION,RADIOLOGIST,1
  4,EMERGENCY,NURSE,2
  4,FOLLOW_UP,GENERAL_PRACTITIONER,3
  4,CONSULTATION,RADIOLOGIST,4
  4,EXAM,SPECIALIST,5
  4,FOLLOW_UP,NURSE,6
  4,EMERGENCY,GENERAL_PRACTITIONER,7
  5,EXAM,,-3
  5,VACCINATION,SPECIALIST,-2
  5,FOLLOW_UP,,-1
  5,EMERGENCY,,0
  5,EMERGENCY,GENERAL_PRACTITIONER,1
  5,FOLLOW_UP,GENERAL_PRACTITIONER,2
  5,EXAM,LABORATORY,3
  5,FOLLOW_UP,,4
  5,EMERGENCY,GENERAL_PRACTITIONER,5
  5,EXAM,RADIOLOGIST,6
  5,CONSULTATION,GENERAL_PRACTITIONER,7
  5,EMERGENCY,GENERAL_PRACTITIONER,8
  5,CONSULTATION,GENERAL_PRACTITIONER,9
  5,EMERGENCY,NURSE,10
  5,FOLLOW_UP,RADIOLOGIST,11
  5,CONSULTATION,,12
  5,EXAM,RADIOLOGIST,13
  5,EXAM,RADIOLOGIST,14
  6,EMERGENCY,GENERAL_PRACTITIONER,-3
  6,CONSULTATION,SPECIALIST,-2
  6,CONSULTATION,RADIOLOGIST,-1
  6,EMERGENCY,LABORATORY,0
  6,EXAM,,1
  6,VACCINATION,GENERAL_PRACTITIONER,2
  6,EXAM,,3
  6,EMERGENCY,NURSE,4
  6,VACCINATION,RADIOLOGIST,5
  6,VACCINATION,SPECIALIST,6
  6,VACCINATION,GENERAL_PRACTITIONER,7
  6,VACCINATION,LABORATORY,8
  6,EMERGENCY,NURSE,9
  7,CONSULTATION,RADIOLOGIST,-3
  7,VACCINATION,NURSE,-2
  7,CONSULTATION,NURSE,-1
  7,CONSULTATION,RADIOLOGIST,0
  7,FOLLOW_UP,SPECIALIST,1
  7,FOLLOW_UP,GENERAL_PRACTITIONER,2
  7,EXAM,,3
  8,FOLLOW_UP,NURSE,-3
  8,CONSULTATION,,-2
  8,VACCINATION,,-1
  8,FOLLOW_UP,GENERAL_PRACTITIONER,0
  8,EMERGENCY,,1
  8,VACCINATION,NURSE,2
  8,CONSULTATION,LABORATORY,3
  8,EMERGENCY,,4
  9,FOLLOW_UP,NURSE,-3
  9,VACCINATION,LABORATORY,-2
  9,CONSULTATION,RADIOLOGIST,-1
  9,FOLLOW_UP,LABORATORY,0
  9,CONSULTATION,GENERAL_PRACTITIONER,1
  9,FOLLOW_UP,LABORATORY,2
  9,FOLLOW_UP,NURSE,3
  10,FOLLOW_UP,RADIOLOGIST,-3
  10,EMERGENCY,SPECIALIST,-2
  10,EMERGENCY,SPECIALIST,-1
  10,EXAM,NURSE,0
  10,CONSULTATION,GENERAL_PRACTITIONER,1
  10,EXAM,SPECIALIST,2
  10,FOLLOW_UP,SPECIALIST,3
  10,CONSULTATION,LABORATORY,4
  10,EXAM,GENERAL_PRACTITIONER,5
  10,VACCINATION,NURSE,6
  10,EXAM,SPECIALIST,7
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[interval]
  '''
  patient_id,medication,administration_route,dosage,__RELATIVE_RANK__
  1,PAIN_RELIEVER,,2,-3.0
  1,ANTICOAGULANT,CUTANEOUS,1,-2.0
  1,ANTIBIOTIC,ORAL,2,-1.0
  1,ANTIHYPERTENSIVE,INTRAVENOUS,3,0.0
  1,ANTICOAGULANT,INTRAVENOUS,3,1.0
  2,ANTIBIOTIC,ORAL,2,-3.0
  2,PAIN_RELIEVER,,1,-2.0
  2,PAIN_RELIEVER,INTRAVENOUS,1,-1.0
  2,ANTIBIOTIC,INHALATION,1,0.0
  2,ANTIBIOTIC,CUTANEOUS,3,1.0
  2,ANTIHYPERTENSIVE,INHALATION,2,2.0
  3,ANTIBIOTIC,INHALATION,3,
  3,PAIN_RELIEVER,ORAL,2,
  3,ANTIHYPERTENSIVE,ORAL,2,
  4,PAIN_RELIEVER,INTRAMUSCULAR,3,-3.0
  4,ANTIBIOTIC,ORAL,3,-2.0
  4,CORTICOSTEROID,INTRAVENOUS,2,-1.0
  4,ANTICOAGULANT,ORAL,1,0.0
  4,CORTICOSTEROID,INHALATION,3,1.0
  4,ANTICOAGULANT,INTRAMUSCULAR,2,2.0
  5,ANTIHYPERTENSIVE,INTRAVENOUS,1,-3.0
  5,CORTICOSTEROID,CUTANEOUS,2,-2.0
  5,ANTIHYPERTENSIVE,INHALATION,2,-1.0
  5,CORTICOSTEROID,,1,0.0
  5,ANTIBIOTIC,CUTANEOUS,2,1.0
  5,PAIN_RELIEVER,INTRAMUSCULAR,2,2.0
  6,CORTICOSTEROID,INHALATION,1,-3.0
  6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,-2.0
  6,ANTIHYPERTENSIVE,INHALATION,2,-1.0
  6,CORTICOSTEROID,CUTANEOUS,1,0.0
  6,CORTICOSTEROID,INTRAVENOUS,3,1.0
  6,ANTIBIOTIC,INTRAMUSCULAR,1,2.0
  6,CORTICOSTEROID,INHALATION,2,3.0
  7,PAIN_RELIEVER,INHALATION,3,
  7,ANTIBIOTIC,,3,
  7,ANTICOAGULANT,INTRAMUSCULAR,2,
  8,CORTICOSTEROID,,3,-3.0
  8,ANTIBIOTIC,ORAL,3,-2.0
  8,ANTIBIOTIC,ORAL,3,-1.0
  8,PAIN_RELIEVER,INHALATION,2,0.0
  8,ANTICOAGULANT,INHALATION,2,1.0
  8,PAIN_RELIEVER,CUTANEOUS,3,2.0
  8,CORTICOSTEROID,ORAL,3,3.0
  9,ANTICOAGULANT,INTRAMUSCULAR,3,-3.0
  9,ANTIBIOTIC,ORAL,1,-2.0
  9,PAIN_RELIEVER,INTRAVENOUS,1,-1.0
  9,ANTIBIOTIC,CUTANEOUS,3,0.0
  10,ANTICOAGULANT,INTRAVENOUS,2,-3.0
  10,ANTIBIOTIC,INTRAVENOUS,3,-2.0
  10,ANTICOAGULANT,INTRAMUSCULAR,2,-1.0
  10,ANTIHYPERTENSIVE,INHALATION,2,0.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_rank_tzero_modified[state]
  '''
  patient_id,health_state,condition,__RELATIVE_RANK__
  1,HEALTHY,DIGESTIVE,
  1,HEALTHY,,
  2,HEALTHY,CARDIAC,
  2,CHRONIC_MONITORING,CARDIAC,
  3,CONVALESCENCE,CARDIAC,
  3,CHRONIC_MONITORING,NEUROLOGICAL,
  3,REMISSION,CARDIAC,
  4,CHRONIC_MONITORING,NEUROLOGICAL,-3.0
  4,CONVALESCENCE,,-2.0
  4,REMISSION,DIGESTIVE,-1.0
  4,CONVALESCENCE,,0.0
  5,CONVALESCENCE,DIGESTIVE,
  5,CHRONIC_MONITORING,DIGESTIVE,
  6,REMISSION,DIGESTIVE,-3.0
  6,TREATMENT,RESPIRATORY,-2.0
  6,TREATMENT,DIGESTIVE,-1.0
  6,CONVALESCENCE,DIGESTIVE,0.0
  7,HEALTHY,RESPIRATORY,-3.0
  7,TREATMENT,NEUROLOGICAL,-2.0
  7,HEALTHY,DIGESTIVE,-1.0
  7,REMISSION,RESPIRATORY,0.0
  8,CONVALESCENCE,RESPIRATORY,
  8,TREATMENT,,
  9,CONVALESCENCE,DIGESTIVE,
  9,HEALTHY,,
  10,HEALTHY,DIGESTIVE,
  10,CHRONIC_MONITORING,NEUROLOGICAL,
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[event]
  '''
  patient_id,date,event_type,provider
  1,-1608.0,EXAM,NURSE
  1,-1584.0,FOLLOW_UP,RADIOLOGIST
  1,-696.0,EXAM,
  1,0.0,FOLLOW_UP,RADIOLOGIST
  1,1752.0,VACCINATION,
  1,2496.0,VACCINATION,LABORATORY
  1,3048.0,EMERGENCY,NURSE
  1,4080.0,VACCINATION,SPECIALIST
  1,6168.0,CONSULTATION,NURSE
  1,6264.0,EMERGENCY,
  1,6528.0,EMERGENCY,
  2,-936.0,VACCINATION,SPECIALIST
  2,-840.0,EXAM,RADIOLOGIST
  2,-816.0,VACCINATION,GENERAL_PRACTITIONER
  2,0.0,VACCINATION,SPECIALIST
  2,1008.0,FOLLOW_UP,NURSE
  2,1104.0,FOLLOW_UP,GENERAL_PRACTITIONER
  2,1872.0,EXAM,RADIOLOGIST
  2,2424.0,FOLLOW_UP,
  2,2712.0,VACCINATION,
  2,3096.0,VACCINATION,SPECIALIST
  2,4200.0,EMERGENCY,GENERAL_PRACTITIONER
  2,4224.0,EXAM,LABORATORY
  2,4368.0,EMERGENCY,RADIOLOGIST
  2,5304.0,FOLLOW_UP,SPECIALIST
  2,5976.0,FOLLOW_UP,SPECIALIST
  2,6024.0,VACCINATION,RADIOLOGIST
  3,-888.0,CONSULTATION,RADIOLOGIST
  3,-768.0,FOLLOW_UP,NURSE
  3,-576.0,FOLLOW_UP,LABORATORY
  3,0.0,CONSULTATION,
  3,384.0,EMERGENCY,
  3,1704.0,EMERGENCY,NURSE
  3,2568.0,EMERGENCY,NURSE
  3,3888.0,FOLLOW_UP,NURSE
  3,3984.0,EXAM,GENERAL_PRACTITIONER
  3,4488.0,VACCINATION,RADIOLOGIST
  3,4608.0,FOLLOW_UP,SPECIALIST
  3,5376.0,EMERGENCY,LABORATORY
  3,6696.0,CONSULTATION,RADIOLOGIST
  4,-1896.0,VACCINATION,LABORATORY
  4,-528.0,VACCINATION,SPECIALIST
  4,-288.0,VACCINATION,LABORATORY
  4,0.0,VACCINATION,RADIOLOGIST
  4,624.0,VACCINATION,RADIOLOGIST
  4,1248.0,EMERGENCY,NURSE
  4,1488.0,FOLLOW_UP,GENERAL_PRACTITIONER
  4,1704.0,CONSULTATION,RADIOLOGIST
  4,2376.0,EXAM,SPECIALIST
  4,2952.0,FOLLOW_UP,NURSE
  4,3528.0,EMERGENCY,GENERAL_PRACTITIONER
  5,-1896.0,EXAM,
  5,-696.0,VACCINATION,SPECIALIST
  5,-648.0,FOLLOW_UP,
  5,0.0,EMERGENCY,
  5,408.0,EMERGENCY,GENERAL_PRACTITIONER
  5,768.0,FOLLOW_UP,GENERAL_PRACTITIONER
  5,1080.0,EXAM,LABORATORY
  5,1344.0,FOLLOW_UP,
  5,1704.0,EMERGENCY,GENERAL_PRACTITIONER
  5,2184.0,EXAM,RADIOLOGIST
  5,2376.0,CONSULTATION,GENERAL_PRACTITIONER
  5,2928.0,EMERGENCY,GENERAL_PRACTITIONER
  5,3600.0,CONSULTATION,GENERAL_PRACTITIONER
  5,3648.0,EMERGENCY,NURSE
  5,4176.0,FOLLOW_UP,RADIOLOGIST
  5,4848.0,CONSULTATION,
  5,5424.0,EXAM,RADIOLOGIST
  5,6000.0,EXAM,RADIOLOGIST
  6,-2088.0,EMERGENCY,GENERAL_PRACTITIONER
  6,-1536.0,CONSULTATION,SPECIALIST
  6,-288.0,CONSULTATION,RADIOLOGIST
  6,0.0,EMERGENCY,LABORATORY
  6,96.0,EXAM,
  6,576.0,VACCINATION,GENERAL_PRACTITIONER
  6,648.0,EXAM,
  6,2616.0,EMERGENCY,NURSE
  6,3240.0,VACCINATION,RADIOLOGIST
  6,3336.0,VACCINATION,SPECIALIST
  6,3432.0,VACCINATION,GENERAL_PRACTITIONER
  6,4320.0,VACCINATION,LABORATORY
  6,5328.0,EMERGENCY,NURSE
  7,-1848.0,CONSULTATION,RADIOLOGIST
  7,-1152.0,VACCINATION,NURSE
  7,-960.0,CONSULTATION,NURSE
  7,0.0,CONSULTATION,RADIOLOGIST
  7,24.0,FOLLOW_UP,SPECIALIST
  7,1344.0,FOLLOW_UP,GENERAL_PRACTITIONER
  7,4464.0,EXAM,
  8,-4896.0,FOLLOW_UP,NURSE
  8,-2352.0,CONSULTATION,
  8,-1560.0,VACCINATION,
  8,0.0,FOLLOW_UP,GENERAL_PRACTITIONER
  8,912.0,EMERGENCY,
  8,1224.0,VACCINATION,NURSE
  8,1392.0,CONSULTATION,LABORATORY
  8,2184.0,EMERGENCY,
  9,-3480.0,FOLLOW_UP,NURSE
  9,-456.0,VACCINATION,LABORATORY
  9,-72.0,CONSULTATION,RADIOLOGIST
  9,0.0,FOLLOW_UP,LABORATORY
  9,24.0,CONSULTATION,GENERAL_PRACTITIONER
  9,1008.0,FOLLOW_UP,LABORATORY
  9,2664.0,FOLLOW_UP,NURSE
  10,-5064.0,FOLLOW_UP,RADIOLOGIST
  10,-2880.0,EMERGENCY,SPECIALIST
  10,-2064.0,EMERGENCY,SPECIALIST
  10,0.0,EXAM,NURSE
  10,624.0,CONSULTATION,GENERAL_PRACTITIONER
  10,816.0,EXAM,SPECIALIST
  10,1248.0,FOLLOW_UP,SPECIALIST
  10,1416.0,CONSULTATION,LABORATORY
  10,1656.0,EXAM,GENERAL_PRACTITIONER
  10,1776.0,VACCINATION,NURSE
  10,1824.0,EXAM,SPECIALIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,-3240.0,-3000.0,PAIN_RELIEVER,,2
  1,-3144.0,-2760.0,ANTICOAGULANT,CUTANEOUS,1
  1,-2952.0,-2376.0,ANTIBIOTIC,ORAL,2
  1,0.0,168.0,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,2616.0,2880.0,ANTICOAGULANT,INTRAVENOUS,3
  2,-3360.0,-2664.0,ANTIBIOTIC,ORAL,2
  2,-3240.0,-2520.0,PAIN_RELIEVER,,1
  2,-2640.0,-2352.0,PAIN_RELIEVER,INTRAVENOUS,1
  2,0.0,360.0,ANTIBIOTIC,INHALATION,1
  2,1800.0,2064.0,ANTIBIOTIC,CUTANEOUS,3
  2,1800.0,2328.0,ANTIHYPERTENSIVE,INHALATION,2
  3,,,ANTIBIOTIC,INHALATION,3
  3,,,PAIN_RELIEVER,ORAL,2
  3,,,ANTIHYPERTENSIVE,ORAL,2
  4,-2880.0,-2616.0,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,-672.0,-24.0,ANTIBIOTIC,ORAL,3
  4,-264.0,408.0,CORTICOSTEROID,INTRAVENOUS,2
  4,0.0,456.0,ANTICOAGULANT,ORAL,1
  4,576.0,840.0,CORTICOSTEROID,INHALATION,3
  4,2760.0,2952.0,ANTICOAGULANT,INTRAMUSCULAR,2
  5,-4632.0,-4200.0,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,-4344.0,-3936.0,CORTICOSTEROID,CUTANEOUS,2
  5,-3240.0,-2736.0,ANTIHYPERTENSIVE,INHALATION,2
  5,0.0,384.0,CORTICOSTEROID,,1
  5,48.0,336.0,ANTIBIOTIC,CUTANEOUS,2
  5,1128.0,1704.0,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,-1200.0,-600.0,CORTICOSTEROID,INHALATION,1
  6,-1008.0,-816.0,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,-456.0,-72.0,ANTIHYPERTENSIVE,INHALATION,2
  6,0.0,696.0,CORTICOSTEROID,CUTANEOUS,1
  6,360.0,768.0,CORTICOSTEROID,INTRAVENOUS,3
  6,648.0,1368.0,ANTIBIOTIC,INTRAMUSCULAR,1
  6,2016.0,2232.0,CORTICOSTEROID,INHALATION,2
  7,,,PAIN_RELIEVER,INHALATION,3
  7,,,ANTIBIOTIC,,3
  7,,,ANTICOAGULANT,INTRAMUSCULAR,2
  8,-1536.0,-816.0,CORTICOSTEROID,,3
  8,-1248.0,-1008.0,ANTIBIOTIC,ORAL,3
  8,-1200.0,-816.0,ANTIBIOTIC,ORAL,3
  8,0.0,720.0,PAIN_RELIEVER,INHALATION,2
  8,3840.0,4248.0,ANTICOAGULANT,INHALATION,2
  8,4200.0,4824.0,PAIN_RELIEVER,CUTANEOUS,3
  8,5184.0,5400.0,CORTICOSTEROID,ORAL,3
  9,-3720.0,-3144.0,ANTICOAGULANT,INTRAMUSCULAR,3
  9,-3312.0,-2880.0,ANTIBIOTIC,ORAL,1
  9,-1248.0,-1008.0,PAIN_RELIEVER,INTRAVENOUS,1
  9,0.0,336.0,ANTIBIOTIC,CUTANEOUS,3
  10,-3816.0,-3120.0,ANTICOAGULANT,INTRAVENOUS,2
  10,-3216.0,-2496.0,ANTIBIOTIC,INTRAVENOUS,3
  10,-3072.0,-2784.0,ANTICOAGULANT,INTRAMUSCULAR,2
  10,0.0,168.0,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_granularity_modified[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,,,HEALTHY,DIGESTIVE
  1,,,HEALTHY,
  2,,,HEALTHY,CARDIAC
  2,,,CHRONIC_MONITORING,CARDIAC
  3,,,CONVALESCENCE,CARDIAC
  3,,,CHRONIC_MONITORING,NEUROLOGICAL
  3,,,REMISSION,CARDIAC
  4,-8328.0,-4536.0,CHRONIC_MONITORING,NEUROLOGICAL
  4,-4536.0,-3576.0,CONVALESCENCE,
  4,-3576.0,0.0,REMISSION,DIGESTIVE
  4,0.0,408.0,CONVALESCENCE,
  5,,,CONVALESCENCE,DIGESTIVE
  5,,,CHRONIC_MONITORING,DIGESTIVE
  6,-8328.0,-6720.0,REMISSION,DIGESTIVE
  6,-6720.0,-2880.0,TREATMENT,RESPIRATORY
  6,-2880.0,0.0,TREATMENT,DIGESTIVE
  6,0.0,408.0,CONVALESCENCE,DIGESTIVE
  7,-8328.0,-4800.0,HEALTHY,RESPIRATORY
  7,-4800.0,-3552.0,TREATMENT,NEUROLOGICAL
  7,-3552.0,0.0,HEALTHY,DIGESTIVE
  7,0.0,408.0,REMISSION,RESPIRATORY
  8,,,CONVALESCENCE,RESPIRATORY
  8,,,TREATMENT,
  9,,,CONVALESCENCE,DIGESTIVE
  9,,,HEALTHY,
  10,,,HEALTHY,DIGESTIVE
  10,,,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[event]
  '''
  patient_id,date,event_type,provider
  1,0.0,EXAM,NURSE
  1,1.0,FOLLOW_UP,RADIOLOGIST
  1,38.0,EXAM,
  1,67.0,FOLLOW_UP,RADIOLOGIST
  1,140.0,VACCINATION,
  1,171.0,VACCINATION,LABORATORY
  1,194.0,EMERGENCY,NURSE
  1,237.0,VACCINATION,SPECIALIST
  1,324.0,CONSULTATION,NURSE
  1,328.0,EMERGENCY,
  1,339.0,EMERGENCY,
  2,0.0,VACCINATION,SPECIALIST
  2,4.0,EXAM,RADIOLOGIST
  2,5.0,VACCINATION,GENERAL_PRACTITIONER
  2,39.0,VACCINATION,SPECIALIST
  2,81.0,FOLLOW_UP,NURSE
  2,85.0,FOLLOW_UP,GENERAL_PRACTITIONER
  2,117.0,EXAM,RADIOLOGIST
  2,140.0,FOLLOW_UP,
  2,152.0,VACCINATION,
  2,168.0,VACCINATION,SPECIALIST
  2,214.0,EMERGENCY,GENERAL_PRACTITIONER
  2,215.0,EXAM,LABORATORY
  2,221.0,EMERGENCY,RADIOLOGIST
  2,260.0,FOLLOW_UP,SPECIALIST
  2,288.0,FOLLOW_UP,SPECIALIST
  2,290.0,VACCINATION,RADIOLOGIST
  3,0.0,CONSULTATION,RADIOLOGIST
  3,5.0,FOLLOW_UP,NURSE
  3,13.0,FOLLOW_UP,LABORATORY
  3,37.0,CONSULTATION,
  3,53.0,EMERGENCY,
  3,108.0,EMERGENCY,NURSE
  3,144.0,EMERGENCY,NURSE
  3,199.0,FOLLOW_UP,NURSE
  3,203.0,EXAM,GENERAL_PRACTITIONER
  3,224.0,VACCINATION,RADIOLOGIST
  3,229.0,FOLLOW_UP,SPECIALIST
  3,261.0,EMERGENCY,LABORATORY
  3,316.0,CONSULTATION,RADIOLOGIST
  4,0.0,VACCINATION,LABORATORY
  4,57.0,VACCINATION,SPECIALIST
  4,67.0,VACCINATION,LABORATORY
  4,79.0,VACCINATION,RADIOLOGIST
  4,105.0,VACCINATION,RADIOLOGIST
  4,131.0,EMERGENCY,NURSE
  4,141.0,FOLLOW_UP,GENERAL_PRACTITIONER
  4,150.0,CONSULTATION,RADIOLOGIST
  4,178.0,EXAM,SPECIALIST
  4,202.0,FOLLOW_UP,NURSE
  4,226.0,EMERGENCY,GENERAL_PRACTITIONER
  5,0.0,EXAM,
  5,50.0,VACCINATION,SPECIALIST
  5,52.0,FOLLOW_UP,
  5,79.0,EMERGENCY,
  5,96.0,EMERGENCY,GENERAL_PRACTITIONER
  5,111.0,FOLLOW_UP,GENERAL_PRACTITIONER
  5,124.0,EXAM,LABORATORY
  5,135.0,FOLLOW_UP,
  5,150.0,EMERGENCY,GENERAL_PRACTITIONER
  5,170.0,EXAM,RADIOLOGIST
  5,178.0,CONSULTATION,GENERAL_PRACTITIONER
  5,201.0,EMERGENCY,GENERAL_PRACTITIONER
  5,229.0,CONSULTATION,GENERAL_PRACTITIONER
  5,231.0,EMERGENCY,NURSE
  5,253.0,FOLLOW_UP,RADIOLOGIST
  5,281.0,CONSULTATION,
  5,305.0,EXAM,RADIOLOGIST
  5,329.0,EXAM,RADIOLOGIST
  6,0.0,EMERGENCY,GENERAL_PRACTITIONER
  6,23.0,CONSULTATION,SPECIALIST
  6,75.0,CONSULTATION,RADIOLOGIST
  6,87.0,EMERGENCY,LABORATORY
  6,91.0,EXAM,
  6,111.0,VACCINATION,GENERAL_PRACTITIONER
  6,114.0,EXAM,
  6,196.0,EMERGENCY,NURSE
  6,222.0,VACCINATION,RADIOLOGIST
  6,226.0,VACCINATION,SPECIALIST
  6,230.0,VACCINATION,GENERAL_PRACTITIONER
  6,267.0,VACCINATION,LABORATORY
  6,309.0,EMERGENCY,NURSE
  7,0.0,CONSULTATION,RADIOLOGIST
  7,29.0,VACCINATION,NURSE
  7,37.0,CONSULTATION,NURSE
  7,77.0,CONSULTATION,RADIOLOGIST
  7,78.0,FOLLOW_UP,SPECIALIST
  7,133.0,FOLLOW_UP,GENERAL_PRACTITIONER
  7,263.0,EXAM,
  8,0.0,FOLLOW_UP,NURSE
  8,106.0,CONSULTATION,
  8,139.0,VACCINATION,
  8,204.0,FOLLOW_UP,GENERAL_PRACTITIONER
  8,242.0,EMERGENCY,
  8,255.0,VACCINATION,NURSE
  8,262.0,CONSULTATION,LABORATORY
  8,295.0,EMERGENCY,
  9,0.0,FOLLOW_UP,NURSE
  9,126.0,VACCINATION,LABORATORY
  9,142.0,CONSULTATION,RADIOLOGIST
  9,145.0,FOLLOW_UP,LABORATORY
  9,146.0,CONSULTATION,GENERAL_PRACTITIONER
  9,187.0,FOLLOW_UP,LABORATORY
  9,256.0,FOLLOW_UP,NURSE
  10,0.0,FOLLOW_UP,RADIOLOGIST
  10,91.0,EMERGENCY,SPECIALIST
  10,125.0,EMERGENCY,SPECIALIST
  10,211.0,EXAM,NURSE
  10,237.0,CONSULTATION,GENERAL_PRACTITIONER
  10,245.0,EXAM,SPECIALIST
  10,263.0,FOLLOW_UP,SPECIALIST
  10,270.0,CONSULTATION,LABORATORY
  10,280.0,EXAM,GENERAL_PRACTITIONER
  10,285.0,VACCINATION,NURSE
  10,287.0,EXAM,SPECIALIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,0.0,10.0,PAIN_RELIEVER,,2
  1,4.0,20.0,ANTICOAGULANT,CUTANEOUS,1
  1,12.0,36.0,ANTIBIOTIC,ORAL,2
  1,135.0,142.0,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,244.0,255.0,ANTICOAGULANT,INTRAVENOUS,3
  2,0.0,29.0,ANTIBIOTIC,ORAL,2
  2,5.0,35.0,PAIN_RELIEVER,,1
  2,30.0,42.0,PAIN_RELIEVER,INTRAVENOUS,1
  2,140.0,155.0,ANTIBIOTIC,INHALATION,1
  2,215.0,226.0,ANTIBIOTIC,CUTANEOUS,3
  2,215.0,237.0,ANTIHYPERTENSIVE,INHALATION,2
  3,0.0,9.0,ANTIBIOTIC,INHALATION,3
  3,162.0,189.0,PAIN_RELIEVER,ORAL,2
  3,178.0,201.0,ANTIHYPERTENSIVE,ORAL,2
  4,0.0,11.0,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,92.0,119.0,ANTIBIOTIC,ORAL,3
  4,109.0,137.0,CORTICOSTEROID,INTRAVENOUS,2
  4,120.0,139.0,ANTICOAGULANT,ORAL,1
  4,144.0,155.0,CORTICOSTEROID,INHALATION,3
  4,235.0,243.0,ANTICOAGULANT,INTRAMUSCULAR,2
  5,0.0,18.0,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,12.0,29.0,CORTICOSTEROID,CUTANEOUS,2
  5,58.0,79.0,ANTIHYPERTENSIVE,INHALATION,2
  5,193.0,209.0,CORTICOSTEROID,,1
  5,195.0,207.0,ANTIBIOTIC,CUTANEOUS,2
  5,240.0,264.0,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,0.0,25.0,CORTICOSTEROID,INHALATION,1
  6,8.0,16.0,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,31.0,47.0,ANTIHYPERTENSIVE,INHALATION,2
  6,50.0,79.0,CORTICOSTEROID,CUTANEOUS,1
  6,65.0,82.0,CORTICOSTEROID,INTRAVENOUS,3
  6,77.0,107.0,ANTIBIOTIC,INTRAMUSCULAR,1
  6,134.0,143.0,CORTICOSTEROID,INHALATION,2
  7,0.0,23.0,PAIN_RELIEVER,INHALATION,3
  7,39.0,60.0,ANTIBIOTIC,,3
  7,99.0,114.0,ANTICOAGULANT,INTRAMUSCULAR,2
  8,0.0,30.0,CORTICOSTEROID,,3
  8,12.0,22.0,ANTIBIOTIC,ORAL,3
  8,14.0,30.0,ANTIBIOTIC,ORAL,3
  8,64.0,94.0,PAIN_RELIEVER,INHALATION,2
  8,224.0,241.0,ANTICOAGULANT,INHALATION,2
  8,239.0,265.0,PAIN_RELIEVER,CUTANEOUS,3
  8,280.0,289.0,CORTICOSTEROID,ORAL,3
  9,0.0,24.0,ANTICOAGULANT,INTRAMUSCULAR,3
  9,17.0,35.0,ANTIBIOTIC,ORAL,1
  9,103.0,113.0,PAIN_RELIEVER,INTRAVENOUS,1
  9,155.0,169.0,ANTIBIOTIC,CUTANEOUS,3
  10,0.0,29.0,ANTICOAGULANT,INTRAVENOUS,2
  10,25.0,55.0,ANTIBIOTIC,INTRAVENOUS,3
  10,31.0,43.0,ANTICOAGULANT,INTRAMUSCULAR,2
  10,159.0,166.0,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_default[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,0.0,349.0,HEALTHY,DIGESTIVE
  1,349.0,364.0,HEALTHY,
  2,0.0,349.0,HEALTHY,CARDIAC
  2,349.0,364.0,CHRONIC_MONITORING,CARDIAC
  3,0.0,94.0,CONVALESCENCE,CARDIAC
  3,94.0,348.0,CHRONIC_MONITORING,NEUROLOGICAL
  3,348.0,364.0,REMISSION,CARDIAC
  4,0.0,158.0,CHRONIC_MONITORING,NEUROLOGICAL
  4,158.0,198.0,CONVALESCENCE,
  4,198.0,347.0,REMISSION,DIGESTIVE
  4,347.0,364.0,CONVALESCENCE,
  5,0.0,349.0,CONVALESCENCE,DIGESTIVE
  5,349.0,364.0,CHRONIC_MONITORING,DIGESTIVE
  6,0.0,67.0,REMISSION,DIGESTIVE
  6,67.0,227.0,TREATMENT,RESPIRATORY
  6,227.0,347.0,TREATMENT,DIGESTIVE
  6,347.0,364.0,CONVALESCENCE,DIGESTIVE
  7,0.0,147.0,HEALTHY,RESPIRATORY
  7,147.0,199.0,TREATMENT,NEUROLOGICAL
  7,199.0,347.0,HEALTHY,DIGESTIVE
  7,347.0,364.0,REMISSION,RESPIRATORY
  8,0.0,349.0,CONVALESCENCE,RESPIRATORY
  8,349.0,364.0,TREATMENT,
  9,0.0,349.0,CONVALESCENCE,DIGESTIVE
  9,349.0,364.0,HEALTHY,
  10,0.0,349.0,HEALTHY,DIGESTIVE
  10,349.0,364.0,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[event]
  '''
  patient_id,date,event_type,provider
  1,-67.0,EXAM,NURSE
  1,-66.0,FOLLOW_UP,RADIOLOGIST
  1,-29.0,EXAM,
  1,0.0,FOLLOW_UP,RADIOLOGIST
  1,73.0,VACCINATION,
  1,104.0,VACCINATION,LABORATORY
  1,127.0,EMERGENCY,NURSE
  1,170.0,VACCINATION,SPECIALIST
  1,257.0,CONSULTATION,NURSE
  1,261.0,EMERGENCY,
  1,272.0,EMERGENCY,
  2,-39.0,VACCINATION,SPECIALIST
  2,-35.0,EXAM,RADIOLOGIST
  2,-34.0,VACCINATION,GENERAL_PRACTITIONER
  2,0.0,VACCINATION,SPECIALIST
  2,42.0,FOLLOW_UP,NURSE
  2,46.0,FOLLOW_UP,GENERAL_PRACTITIONER
  2,78.0,EXAM,RADIOLOGIST
  2,101.0,FOLLOW_UP,
  2,113.0,VACCINATION,
  2,129.0,VACCINATION,SPECIALIST
  2,175.0,EMERGENCY,GENERAL_PRACTITIONER
  2,176.0,EXAM,LABORATORY
  2,182.0,EMERGENCY,RADIOLOGIST
  2,221.0,FOLLOW_UP,SPECIALIST
  2,249.0,FOLLOW_UP,SPECIALIST
  2,251.0,VACCINATION,RADIOLOGIST
  3,-37.0,CONSULTATION,RADIOLOGIST
  3,-32.0,FOLLOW_UP,NURSE
  3,-24.0,FOLLOW_UP,LABORATORY
  3,0.0,CONSULTATION,
  3,16.0,EMERGENCY,
  3,71.0,EMERGENCY,NURSE
  3,107.0,EMERGENCY,NURSE
  3,162.0,FOLLOW_UP,NURSE
  3,166.0,EXAM,GENERAL_PRACTITIONER
  3,187.0,VACCINATION,RADIOLOGIST
  3,192.0,FOLLOW_UP,SPECIALIST
  3,224.0,EMERGENCY,LABORATORY
  3,279.0,CONSULTATION,RADIOLOGIST
  4,-79.0,VACCINATION,LABORATORY
  4,-22.0,VACCINATION,SPECIALIST
  4,-12.0,VACCINATION,LABORATORY
  4,0.0,VACCINATION,RADIOLOGIST
  4,26.0,VACCINATION,RADIOLOGIST
  4,52.0,EMERGENCY,NURSE
  4,62.0,FOLLOW_UP,GENERAL_PRACTITIONER
  4,71.0,CONSULTATION,RADIOLOGIST
  4,99.0,EXAM,SPECIALIST
  4,123.0,FOLLOW_UP,NURSE
  4,147.0,EMERGENCY,GENERAL_PRACTITIONER
  5,-79.0,EXAM,
  5,-29.0,VACCINATION,SPECIALIST
  5,-27.0,FOLLOW_UP,
  5,0.0,EMERGENCY,
  5,17.0,EMERGENCY,GENERAL_PRACTITIONER
  5,32.0,FOLLOW_UP,GENERAL_PRACTITIONER
  5,45.0,EXAM,LABORATORY
  5,56.0,FOLLOW_UP,
  5,71.0,EMERGENCY,GENERAL_PRACTITIONER
  5,91.0,EXAM,RADIOLOGIST
  5,99.0,CONSULTATION,GENERAL_PRACTITIONER
  5,122.0,EMERGENCY,GENERAL_PRACTITIONER
  5,150.0,CONSULTATION,GENERAL_PRACTITIONER
  5,152.0,EMERGENCY,NURSE
  5,174.0,FOLLOW_UP,RADIOLOGIST
  5,202.0,CONSULTATION,
  5,226.0,EXAM,RADIOLOGIST
  5,250.0,EXAM,RADIOLOGIST
  6,-87.0,EMERGENCY,GENERAL_PRACTITIONER
  6,-64.0,CONSULTATION,SPECIALIST
  6,-12.0,CONSULTATION,RADIOLOGIST
  6,0.0,EMERGENCY,LABORATORY
  6,4.0,EXAM,
  6,24.0,VACCINATION,GENERAL_PRACTITIONER
  6,27.0,EXAM,
  6,109.0,EMERGENCY,NURSE
  6,135.0,VACCINATION,RADIOLOGIST
  6,139.0,VACCINATION,SPECIALIST
  6,143.0,VACCINATION,GENERAL_PRACTITIONER
  6,180.0,VACCINATION,LABORATORY
  6,222.0,EMERGENCY,NURSE
  7,-77.0,CONSULTATION,RADIOLOGIST
  7,-48.0,VACCINATION,NURSE
  7,-40.0,CONSULTATION,NURSE
  7,0.0,CONSULTATION,RADIOLOGIST
  7,1.0,FOLLOW_UP,SPECIALIST
  7,56.0,FOLLOW_UP,GENERAL_PRACTITIONER
  7,186.0,EXAM,
  8,-204.0,FOLLOW_UP,NURSE
  8,-98.0,CONSULTATION,
  8,-65.0,VACCINATION,
  8,0.0,FOLLOW_UP,GENERAL_PRACTITIONER
  8,38.0,EMERGENCY,
  8,51.0,VACCINATION,NURSE
  8,58.0,CONSULTATION,LABORATORY
  8,91.0,EMERGENCY,
  9,-145.0,FOLLOW_UP,NURSE
  9,-19.0,VACCINATION,LABORATORY
  9,-3.0,CONSULTATION,RADIOLOGIST
  9,0.0,FOLLOW_UP,LABORATORY
  9,1.0,CONSULTATION,GENERAL_PRACTITIONER
  9,42.0,FOLLOW_UP,LABORATORY
  9,111.0,FOLLOW_UP,NURSE
  10,-211.0,FOLLOW_UP,RADIOLOGIST
  10,-120.0,EMERGENCY,SPECIALIST
  10,-86.0,EMERGENCY,SPECIALIST
  10,0.0,EXAM,NURSE
  10,26.0,CONSULTATION,GENERAL_PRACTITIONER
  10,34.0,EXAM,SPECIALIST
  10,52.0,FOLLOW_UP,SPECIALIST
  10,59.0,CONSULTATION,LABORATORY
  10,69.0,EXAM,GENERAL_PRACTITIONER
  10,74.0,VACCINATION,NURSE
  10,76.0,EXAM,SPECIALIST
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[interval]
  '''
  patient_id,start_date,end_date,medication,administration_route,dosage
  1,-135.0,-125.0,PAIN_RELIEVER,,2
  1,-131.0,-115.0,ANTICOAGULANT,CUTANEOUS,1
  1,-123.0,-99.0,ANTIBIOTIC,ORAL,2
  1,0.0,7.0,ANTIHYPERTENSIVE,INTRAVENOUS,3
  1,109.0,120.0,ANTICOAGULANT,INTRAVENOUS,3
  2,-140.0,-111.0,ANTIBIOTIC,ORAL,2
  2,-135.0,-105.0,PAIN_RELIEVER,,1
  2,-110.0,-98.0,PAIN_RELIEVER,INTRAVENOUS,1
  2,0.0,15.0,ANTIBIOTIC,INHALATION,1
  2,75.0,86.0,ANTIBIOTIC,CUTANEOUS,3
  2,75.0,97.0,ANTIHYPERTENSIVE,INHALATION,2
  3,,,ANTIBIOTIC,INHALATION,3
  3,,,PAIN_RELIEVER,ORAL,2
  3,,,ANTIHYPERTENSIVE,ORAL,2
  4,-120.0,-109.0,PAIN_RELIEVER,INTRAMUSCULAR,3
  4,-28.0,-1.0,ANTIBIOTIC,ORAL,3
  4,-11.0,17.0,CORTICOSTEROID,INTRAVENOUS,2
  4,0.0,19.0,ANTICOAGULANT,ORAL,1
  4,24.0,35.0,CORTICOSTEROID,INHALATION,3
  4,115.0,123.0,ANTICOAGULANT,INTRAMUSCULAR,2
  5,-193.0,-175.0,ANTIHYPERTENSIVE,INTRAVENOUS,1
  5,-181.0,-164.0,CORTICOSTEROID,CUTANEOUS,2
  5,-135.0,-114.0,ANTIHYPERTENSIVE,INHALATION,2
  5,0.0,16.0,CORTICOSTEROID,,1
  5,2.0,14.0,ANTIBIOTIC,CUTANEOUS,2
  5,47.0,71.0,PAIN_RELIEVER,INTRAMUSCULAR,2
  6,-50.0,-25.0,CORTICOSTEROID,INHALATION,1
  6,-42.0,-34.0,ANTIHYPERTENSIVE,INTRAMUSCULAR,1
  6,-19.0,-3.0,ANTIHYPERTENSIVE,INHALATION,2
  6,0.0,29.0,CORTICOSTEROID,CUTANEOUS,1
  6,15.0,32.0,CORTICOSTEROID,INTRAVENOUS,3
  6,27.0,57.0,ANTIBIOTIC,INTRAMUSCULAR,1
  6,84.0,93.0,CORTICOSTEROID,INHALATION,2
  7,,,PAIN_RELIEVER,INHALATION,3
  7,,,ANTIBIOTIC,,3
  7,,,ANTICOAGULANT,INTRAMUSCULAR,2
  8,-64.0,-34.0,CORTICOSTEROID,,3
  8,-52.0,-42.0,ANTIBIOTIC,ORAL,3
  8,-50.0,-34.0,ANTIBIOTIC,ORAL,3
  8,0.0,30.0,PAIN_RELIEVER,INHALATION,2
  8,160.0,177.0,ANTICOAGULANT,INHALATION,2
  8,175.0,201.0,PAIN_RELIEVER,CUTANEOUS,3
  8,216.0,225.0,CORTICOSTEROID,ORAL,3
  9,-155.0,-131.0,ANTICOAGULANT,INTRAMUSCULAR,3
  9,-138.0,-120.0,ANTIBIOTIC,ORAL,1
  9,-52.0,-42.0,PAIN_RELIEVER,INTRAVENOUS,1
  9,0.0,14.0,ANTIBIOTIC,CUTANEOUS,3
  10,-159.0,-130.0,ANTICOAGULANT,INTRAVENOUS,2
  10,-134.0,-104.0,ANTIBIOTIC,INTRAVENOUS,3
  10,-128.0,-116.0,ANTICOAGULANT,INTRAMUSCULAR,2
  10,0.0,7.0,ANTIHYPERTENSIVE,INHALATION,2
  
  '''
# ---
# name: TestTransformationMethod.test_to_relative_time_tzero_modified[state]
  '''
  patient_id,start_date,end_date,health_state,condition
  1,,,HEALTHY,DIGESTIVE
  1,,,HEALTHY,
  2,,,HEALTHY,CARDIAC
  2,,,CHRONIC_MONITORING,CARDIAC
  3,,,CONVALESCENCE,CARDIAC
  3,,,CHRONIC_MONITORING,NEUROLOGICAL
  3,,,REMISSION,CARDIAC
  4,-347.0,-189.0,CHRONIC_MONITORING,NEUROLOGICAL
  4,-189.0,-149.0,CONVALESCENCE,
  4,-149.0,0.0,REMISSION,DIGESTIVE
  4,0.0,17.0,CONVALESCENCE,
  5,,,CONVALESCENCE,DIGESTIVE
  5,,,CHRONIC_MONITORING,DIGESTIVE
  6,-347.0,-280.0,REMISSION,DIGESTIVE
  6,-280.0,-120.0,TREATMENT,RESPIRATORY
  6,-120.0,0.0,TREATMENT,DIGESTIVE
  6,0.0,17.0,CONVALESCENCE,DIGESTIVE
  7,-347.0,-200.0,HEALTHY,RESPIRATORY
  7,-200.0,-148.0,TREATMENT,NEUROLOGICAL
  7,-148.0,0.0,HEALTHY,DIGESTIVE
  7,0.0,17.0,REMISSION,RESPIRATORY
  8,,,CONVALESCENCE,RESPIRATORY
  8,,,TREATMENT,
  9,,,CONVALESCENCE,DIGESTIVE
  9,,,HEALTHY,
  10,,,HEALTHY,DIGESTIVE
  10,,,CHRONIC_MONITORING,NEUROLOGICAL
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-event]
  '''
  ,event_type,provider,__TIME_PROPORTION__
  0,CONSULTATION,GENERAL_PRACTITIONER,0.042105263157894736
  1,CONSULTATION,LABORATORY,0.021052631578947368
  2,CONSULTATION,NURSE,0.021052631578947368
  3,CONSULTATION,RADIOLOGIST,0.07368421052631578
  4,CONSULTATION,SPECIALIST,0.010526315789473684
  5,EMERGENCY,GENERAL_PRACTITIONER,0.06315789473684211
  6,EMERGENCY,LABORATORY,0.021052631578947368
  7,EMERGENCY,NURSE,0.07368421052631578
  8,EMERGENCY,RADIOLOGIST,0.010526315789473684
  9,EMERGENCY,SPECIALIST,0.021052631578947368
  10,EXAM,GENERAL_PRACTITIONER,0.021052631578947368
  11,EXAM,LABORATORY,0.021052631578947368
  12,EXAM,NURSE,0.021052631578947368
  13,EXAM,RADIOLOGIST,0.05263157894736842
  14,EXAM,SPECIALIST,0.031578947368421054
  15,FOLLOW_UP,GENERAL_PRACTITIONER,0.05263157894736842
  16,FOLLOW_UP,LABORATORY,0.031578947368421054
  17,FOLLOW_UP,NURSE,0.07368421052631578
  18,FOLLOW_UP,RADIOLOGIST,0.042105263157894736
  19,FOLLOW_UP,SPECIALIST,0.05263157894736842
  20,VACCINATION,GENERAL_PRACTITIONER,0.031578947368421054
  21,VACCINATION,LABORATORY,0.05263157894736842
  22,VACCINATION,NURSE,0.031578947368421054
  23,VACCINATION,RADIOLOGIST,0.05263157894736842
  24,VACCINATION,SPECIALIST,0.07368421052631578
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-interval]
  '''
  ,medication,administration_route,dosage,__TIME_PROPORTION__
  0,ANTIBIOTIC,CUTANEOUS,2,0.014527845036319613
  1,ANTIBIOTIC,CUTANEOUS,3,0.03026634382566586
  2,ANTIBIOTIC,INHALATION,1,0.018159806295399514
  3,ANTIBIOTIC,INHALATION,3,0.010895883777239709
  4,ANTIBIOTIC,INTRAMUSCULAR,1,0.03631961259079903
  5,ANTIBIOTIC,INTRAVENOUS,3,0.03631961259079903
  6,ANTIBIOTIC,ORAL,1,0.021791767554479417
  7,ANTIBIOTIC,ORAL,2,0.06416464891041163
  8,ANTIBIOTIC,ORAL,3,0.06416464891041163
  9,ANTICOAGULANT,CUTANEOUS,1,0.01937046004842615
  10,ANTICOAGULANT,INHALATION,2,0.020581113801452784
  11,ANTICOAGULANT,INTRAMUSCULAR,2,0.0423728813559322
  12,ANTICOAGULANT,INTRAMUSCULAR,3,0.029055690072639227
  13,ANTICOAGULANT,INTRAVENOUS,2,0.035108958837772396
  14,ANTICOAGULANT,INTRAVENOUS,3,0.013317191283292978
  15,ANTICOAGULANT,ORAL,1,0.023002421307506054
  16,ANTIHYPERTENSIVE,INHALATION,2,0.07990314769975787
  17,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,0.009685230024213076
  18,ANTIHYPERTENSIVE,INTRAVENOUS,1,0.021791767554479417
  19,ANTIHYPERTENSIVE,INTRAVENOUS,3,0.00847457627118644
  20,ANTIHYPERTENSIVE,ORAL,2,0.02784503631961259
  21,CORTICOSTEROID,CUTANEOUS,1,0.035108958837772396
  22,CORTICOSTEROID,CUTANEOUS,2,0.020581113801452784
  23,CORTICOSTEROID,INHALATION,1,0.03026634382566586
  24,CORTICOSTEROID,INHALATION,2,0.010895883777239709
  25,CORTICOSTEROID,INHALATION,3,0.013317191283292978
  26,CORTICOSTEROID,INTRAVENOUS,2,0.03389830508474576
  27,CORTICOSTEROID,INTRAVENOUS,3,0.020581113801452784
  28,CORTICOSTEROID,ORAL,3,0.010895883777239709
  29,PAIN_RELIEVER,CUTANEOUS,3,0.031476997578692496
  30,PAIN_RELIEVER,INHALATION,2,0.03631961259079903
  31,PAIN_RELIEVER,INHALATION,3,0.02784503631961259
  32,PAIN_RELIEVER,INTRAMUSCULAR,2,0.029055690072639227
  33,PAIN_RELIEVER,INTRAMUSCULAR,3,0.013317191283292978
  34,PAIN_RELIEVER,INTRAVENOUS,1,0.026634382566585957
  35,PAIN_RELIEVER,ORAL,2,0.03268765133171913
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[False-state]
  '''
  ,health_state,condition,__TIME_PROPORTION__
  0,CHRONIC_MONITORING,CARDIAC,0.004239683436970039
  1,CHRONIC_MONITORING,DIGESTIVE,0.004239683436970039
  2,CHRONIC_MONITORING,NEUROLOGICAL,0.1206896551724138
  3,CONVALESCENCE,CARDIAC,0.026568682871678916
  4,CONVALESCENCE,DIGESTIVE,0.20209157716223855
  5,CONVALESCENCE,RESPIRATORY,0.09864330130016959
  6,HEALTHY,CARDIAC,0.09864330130016959
  7,HEALTHY,DIGESTIVE,0.23911814584511024
  8,HEALTHY,RESPIRATORY,0.041548897682306386
  9,REMISSION,CARDIAC,0.0045223289994347085
  10,REMISSION,DIGESTIVE,0.06105144149236857
  11,REMISSION,RESPIRATORY,0.004804974561899378
  12,TREATMENT,DIGESTIVE,0.033917467495760314
  13,TREATMENT,NEUROLOGICAL,0.014697569248162803
  14,TREATMENT,RESPIRATORY,0.04522328999434709
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-event]
  '''
  ,patient_id,event_type,provider,__TIME_PROPORTION__
  0,1,CONSULTATION,NURSE,0.14285714285714285
  1,1,EMERGENCY,NURSE,0.14285714285714285
  2,1,EXAM,NURSE,0.14285714285714285
  3,1,FOLLOW_UP,RADIOLOGIST,0.2857142857142857
  4,1,VACCINATION,LABORATORY,0.14285714285714285
  5,1,VACCINATION,SPECIALIST,0.14285714285714285
  6,2,EMERGENCY,GENERAL_PRACTITIONER,0.07142857142857142
  7,2,EMERGENCY,RADIOLOGIST,0.07142857142857142
  8,2,EXAM,LABORATORY,0.07142857142857142
  9,2,EXAM,RADIOLOGIST,0.14285714285714285
  10,2,FOLLOW_UP,GENERAL_PRACTITIONER,0.07142857142857142
  11,2,FOLLOW_UP,NURSE,0.07142857142857142
  12,2,FOLLOW_UP,SPECIALIST,0.14285714285714285
  13,2,VACCINATION,GENERAL_PRACTITIONER,0.07142857142857142
  14,2,VACCINATION,RADIOLOGIST,0.07142857142857142
  15,2,VACCINATION,SPECIALIST,0.21428571428571427
  16,3,CONSULTATION,RADIOLOGIST,0.18181818181818182
  17,3,EMERGENCY,LABORATORY,0.09090909090909091
  18,3,EMERGENCY,NURSE,0.18181818181818182
  19,3,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  20,3,FOLLOW_UP,LABORATORY,0.09090909090909091
  21,3,FOLLOW_UP,NURSE,0.18181818181818182
  22,3,FOLLOW_UP,SPECIALIST,0.09090909090909091
  23,3,VACCINATION,RADIOLOGIST,0.09090909090909091
  24,4,CONSULTATION,RADIOLOGIST,0.09090909090909091
  25,4,EMERGENCY,GENERAL_PRACTITIONER,0.09090909090909091
  26,4,EMERGENCY,NURSE,0.09090909090909091
  27,4,EXAM,SPECIALIST,0.09090909090909091
  28,4,FOLLOW_UP,GENERAL_PRACTITIONER,0.09090909090909091
  29,4,FOLLOW_UP,NURSE,0.09090909090909091
  30,4,VACCINATION,LABORATORY,0.18181818181818182
  31,4,VACCINATION,RADIOLOGIST,0.18181818181818182
  32,4,VACCINATION,SPECIALIST,0.09090909090909091
  33,5,CONSULTATION,GENERAL_PRACTITIONER,0.15384615384615385
  34,5,EMERGENCY,GENERAL_PRACTITIONER,0.23076923076923078
  35,5,EMERGENCY,NURSE,0.07692307692307693
  36,5,EXAM,LABORATORY,0.07692307692307693
  37,5,EXAM,RADIOLOGIST,0.23076923076923078
  38,5,FOLLOW_UP,GENERAL_PRACTITIONER,0.07692307692307693
  39,5,FOLLOW_UP,RADIOLOGIST,0.07692307692307693
  40,5,VACCINATION,SPECIALIST,0.07692307692307693
  41,6,CONSULTATION,RADIOLOGIST,0.09090909090909091
  42,6,CONSULTATION,SPECIALIST,0.09090909090909091
  43,6,EMERGENCY,GENERAL_PRACTITIONER,0.09090909090909091
  44,6,EMERGENCY,LABORATORY,0.09090909090909091
  45,6,EMERGENCY,NURSE,0.18181818181818182
  46,6,VACCINATION,GENERAL_PRACTITIONER,0.18181818181818182
  47,6,VACCINATION,LABORATORY,0.09090909090909091
  48,6,VACCINATION,RADIOLOGIST,0.09090909090909091
  49,6,VACCINATION,SPECIALIST,0.09090909090909091
  50,7,CONSULTATION,NURSE,0.16666666666666666
  51,7,CONSULTATION,RADIOLOGIST,0.3333333333333333
  52,7,FOLLOW_UP,GENERAL_PRACTITIONER,0.16666666666666666
  53,7,FOLLOW_UP,SPECIALIST,0.16666666666666666
  54,7,VACCINATION,NURSE,0.16666666666666666
  55,8,CONSULTATION,LABORATORY,0.25
  56,8,FOLLOW_UP,GENERAL_PRACTITIONER,0.25
  57,8,FOLLOW_UP,NURSE,0.25
  58,8,VACCINATION,NURSE,0.25
  59,9,CONSULTATION,GENERAL_PRACTITIONER,0.14285714285714285
  60,9,CONSULTATION,RADIOLOGIST,0.14285714285714285
  61,9,FOLLOW_UP,LABORATORY,0.2857142857142857
  62,9,FOLLOW_UP,NURSE,0.2857142857142857
  63,9,VACCINATION,LABORATORY,0.14285714285714285
  64,10,CONSULTATION,GENERAL_PRACTITIONER,0.09090909090909091
  65,10,CONSULTATION,LABORATORY,0.09090909090909091
  66,10,EMERGENCY,SPECIALIST,0.18181818181818182
  67,10,EXAM,GENERAL_PRACTITIONER,0.09090909090909091
  68,10,EXAM,NURSE,0.09090909090909091
  69,10,EXAM,SPECIALIST,0.18181818181818182
  70,10,FOLLOW_UP,RADIOLOGIST,0.09090909090909091
  71,10,FOLLOW_UP,SPECIALIST,0.09090909090909091
  72,10,VACCINATION,NURSE,0.09090909090909091
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__TIME_PROPORTION__
  0,1,ANTIBIOTIC,ORAL,2,0.41379310344827586
  1,1,ANTICOAGULANT,CUTANEOUS,1,0.27586206896551724
  2,1,ANTICOAGULANT,INTRAVENOUS,3,0.1896551724137931
  3,1,ANTIHYPERTENSIVE,INTRAVENOUS,3,0.1206896551724138
  4,2,ANTIBIOTIC,CUTANEOUS,3,0.12359550561797752
  5,2,ANTIBIOTIC,INHALATION,1,0.16853932584269662
  6,2,ANTIBIOTIC,ORAL,2,0.3258426966292135
  7,2,ANTIHYPERTENSIVE,INHALATION,2,0.24719101123595505
  8,2,PAIN_RELIEVER,INTRAVENOUS,1,0.1348314606741573
  9,3,ANTIBIOTIC,INHALATION,3,0.15254237288135594
  10,3,ANTIHYPERTENSIVE,ORAL,2,0.3898305084745763
  11,3,PAIN_RELIEVER,ORAL,2,0.4576271186440678
  12,4,ANTIBIOTIC,ORAL,3,0.25961538461538464
  13,4,ANTICOAGULANT,INTRAMUSCULAR,2,0.07692307692307693
  14,4,ANTICOAGULANT,ORAL,1,0.18269230769230768
  15,4,CORTICOSTEROID,INHALATION,3,0.10576923076923077
  16,4,CORTICOSTEROID,INTRAVENOUS,2,0.2692307692307692
  17,4,PAIN_RELIEVER,INTRAMUSCULAR,3,0.10576923076923077
  18,5,ANTIBIOTIC,CUTANEOUS,2,0.13043478260869565
  19,5,ANTIHYPERTENSIVE,INHALATION,2,0.22826086956521738
  20,5,ANTIHYPERTENSIVE,INTRAVENOUS,1,0.1956521739130435
  21,5,CORTICOSTEROID,CUTANEOUS,2,0.18478260869565216
  22,5,PAIN_RELIEVER,INTRAMUSCULAR,2,0.2608695652173913
  23,6,ANTIBIOTIC,INTRAMUSCULAR,1,0.22388059701492538
  24,6,ANTIHYPERTENSIVE,INHALATION,2,0.11940298507462686
  25,6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,0.05970149253731343
  26,6,CORTICOSTEROID,CUTANEOUS,1,0.21641791044776118
  27,6,CORTICOSTEROID,INHALATION,1,0.1865671641791045
  28,6,CORTICOSTEROID,INHALATION,2,0.06716417910447761
  29,6,CORTICOSTEROID,INTRAVENOUS,3,0.12686567164179105
  30,7,ANTICOAGULANT,INTRAMUSCULAR,2,0.39473684210526316
  31,7,PAIN_RELIEVER,INHALATION,3,0.6052631578947368
  32,8,ANTIBIOTIC,ORAL,3,0.24074074074074073
  33,8,ANTICOAGULANT,INHALATION,2,0.1574074074074074
  34,8,CORTICOSTEROID,ORAL,3,0.08333333333333333
  35,8,PAIN_RELIEVER,CUTANEOUS,3,0.24074074074074073
  36,8,PAIN_RELIEVER,INHALATION,2,0.2777777777777778
  37,9,ANTIBIOTIC,CUTANEOUS,3,0.21212121212121213
  38,9,ANTIBIOTIC,ORAL,1,0.2727272727272727
  39,9,ANTICOAGULANT,INTRAMUSCULAR,3,0.36363636363636365
  40,9,PAIN_RELIEVER,INTRAVENOUS,1,0.15151515151515152
  41,10,ANTIBIOTIC,INTRAVENOUS,3,0.38461538461538464
  42,10,ANTICOAGULANT,INTRAMUSCULAR,2,0.15384615384615385
  43,10,ANTICOAGULANT,INTRAVENOUS,2,0.3717948717948718
  44,10,ANTIHYPERTENSIVE,INHALATION,2,0.08974358974358974
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_proportion[True-state]
  '''
  ,patient_id,health_state,condition,__TIME_PROPORTION__
  0,1,HEALTHY,DIGESTIVE,1.0
  1,2,CHRONIC_MONITORING,CARDIAC,0.04120879120879121
  2,2,HEALTHY,CARDIAC,0.9587912087912088
  3,3,CHRONIC_MONITORING,NEUROLOGICAL,0.6978021978021978
  4,3,CONVALESCENCE,CARDIAC,0.25824175824175827
  5,3,REMISSION,CARDIAC,0.04395604395604396
  6,4,CHRONIC_MONITORING,NEUROLOGICAL,0.5146579804560261
  7,4,REMISSION,DIGESTIVE,0.48534201954397393
  8,5,CHRONIC_MONITORING,DIGESTIVE,0.04120879120879121
  9,5,CONVALESCENCE,DIGESTIVE,0.9587912087912088
  10,6,CONVALESCENCE,DIGESTIVE,0.046703296703296704
  11,6,REMISSION,DIGESTIVE,0.18406593406593408
  12,6,TREATMENT,DIGESTIVE,0.32967032967032966
  13,6,TREATMENT,RESPIRATORY,0.43956043956043955
  14,7,HEALTHY,DIGESTIVE,0.4065934065934066
  15,7,HEALTHY,RESPIRATORY,0.40384615384615385
  16,7,REMISSION,RESPIRATORY,0.046703296703296704
  17,7,TREATMENT,NEUROLOGICAL,0.14285714285714285
  18,8,CONVALESCENCE,RESPIRATORY,1.0
  19,9,CONVALESCENCE,DIGESTIVE,1.0
  20,10,CHRONIC_MONITORING,NEUROLOGICAL,0.04120879120879121
  21,10,HEALTHY,DIGESTIVE,0.9587912087912088
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-event]
  '''
  ,event_type,provider,__TIME_SPENT__
  0,CONSULTATION,GENERAL_PRACTITIONER,4
  1,CONSULTATION,LABORATORY,2
  2,CONSULTATION,NURSE,2
  3,CONSULTATION,RADIOLOGIST,7
  4,CONSULTATION,SPECIALIST,1
  5,EMERGENCY,GENERAL_PRACTITIONER,6
  6,EMERGENCY,LABORATORY,2
  7,EMERGENCY,NURSE,7
  8,EMERGENCY,RADIOLOGIST,1
  9,EMERGENCY,SPECIALIST,2
  10,EXAM,GENERAL_PRACTITIONER,2
  11,EXAM,LABORATORY,2
  12,EXAM,NURSE,2
  13,EXAM,RADIOLOGIST,5
  14,EXAM,SPECIALIST,3
  15,FOLLOW_UP,GENERAL_PRACTITIONER,5
  16,FOLLOW_UP,LABORATORY,3
  17,FOLLOW_UP,NURSE,7
  18,FOLLOW_UP,RADIOLOGIST,4
  19,FOLLOW_UP,SPECIALIST,5
  20,VACCINATION,GENERAL_PRACTITIONER,3
  21,VACCINATION,LABORATORY,5
  22,VACCINATION,NURSE,3
  23,VACCINATION,RADIOLOGIST,5
  24,VACCINATION,SPECIALIST,7
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-interval]
  '''
  ,medication,administration_route,dosage,__TIME_SPENT__
  0,ANTIBIOTIC,CUTANEOUS,2,12.0
  1,ANTIBIOTIC,CUTANEOUS,3,25.0
  2,ANTIBIOTIC,INHALATION,1,15.0
  3,ANTIBIOTIC,INHALATION,3,9.0
  4,ANTIBIOTIC,INTRAMUSCULAR,1,30.0
  5,ANTIBIOTIC,INTRAVENOUS,3,30.0
  6,ANTIBIOTIC,ORAL,1,18.0
  7,ANTIBIOTIC,ORAL,2,53.0
  8,ANTIBIOTIC,ORAL,3,53.0
  9,ANTICOAGULANT,CUTANEOUS,1,16.0
  10,ANTICOAGULANT,INHALATION,2,17.0
  11,ANTICOAGULANT,INTRAMUSCULAR,2,35.0
  12,ANTICOAGULANT,INTRAMUSCULAR,3,24.0
  13,ANTICOAGULANT,INTRAVENOUS,2,29.0
  14,ANTICOAGULANT,INTRAVENOUS,3,11.0
  15,ANTICOAGULANT,ORAL,1,19.0
  16,ANTIHYPERTENSIVE,INHALATION,2,66.0
  17,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,8.0
  18,ANTIHYPERTENSIVE,INTRAVENOUS,1,18.0
  19,ANTIHYPERTENSIVE,INTRAVENOUS,3,7.0
  20,ANTIHYPERTENSIVE,ORAL,2,23.0
  21,CORTICOSTEROID,CUTANEOUS,1,29.0
  22,CORTICOSTEROID,CUTANEOUS,2,17.0
  23,CORTICOSTEROID,INHALATION,1,25.0
  24,CORTICOSTEROID,INHALATION,2,9.0
  25,CORTICOSTEROID,INHALATION,3,11.0
  26,CORTICOSTEROID,INTRAVENOUS,2,28.0
  27,CORTICOSTEROID,INTRAVENOUS,3,17.0
  28,CORTICOSTEROID,ORAL,3,9.0
  29,PAIN_RELIEVER,CUTANEOUS,3,26.0
  30,PAIN_RELIEVER,INHALATION,2,30.0
  31,PAIN_RELIEVER,INHALATION,3,23.0
  32,PAIN_RELIEVER,INTRAMUSCULAR,2,24.0
  33,PAIN_RELIEVER,INTRAMUSCULAR,3,11.0
  34,PAIN_RELIEVER,INTRAVENOUS,1,22.0
  35,PAIN_RELIEVER,ORAL,2,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[False-state]
  '''
  ,health_state,condition,__TIME_SPENT__
  0,CHRONIC_MONITORING,CARDIAC,15.0
  1,CHRONIC_MONITORING,DIGESTIVE,15.0
  2,CHRONIC_MONITORING,NEUROLOGICAL,427.0
  3,CONVALESCENCE,CARDIAC,94.0
  4,CONVALESCENCE,DIGESTIVE,715.0
  5,CONVALESCENCE,RESPIRATORY,349.0
  6,HEALTHY,CARDIAC,349.0
  7,HEALTHY,DIGESTIVE,846.0
  8,HEALTHY,RESPIRATORY,147.0
  9,REMISSION,CARDIAC,16.0
  10,REMISSION,DIGESTIVE,216.0
  11,REMISSION,RESPIRATORY,17.0
  12,TREATMENT,DIGESTIVE,120.0
  13,TREATMENT,NEUROLOGICAL,52.0
  14,TREATMENT,RESPIRATORY,160.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-event]
  '''
  ,patient_id,event_type,provider,__TIME_SPENT__
  0,1,CONSULTATION,NURSE,1
  1,1,EMERGENCY,NURSE,1
  2,1,EXAM,NURSE,1
  3,1,FOLLOW_UP,RADIOLOGIST,2
  4,1,VACCINATION,LABORATORY,1
  5,1,VACCINATION,SPECIALIST,1
  6,2,EMERGENCY,GENERAL_PRACTITIONER,1
  7,2,EMERGENCY,RADIOLOGIST,1
  8,2,EXAM,LABORATORY,1
  9,2,EXAM,RADIOLOGIST,2
  10,2,FOLLOW_UP,GENERAL_PRACTITIONER,1
  11,2,FOLLOW_UP,NURSE,1
  12,2,FOLLOW_UP,SPECIALIST,2
  13,2,VACCINATION,GENERAL_PRACTITIONER,1
  14,2,VACCINATION,RADIOLOGIST,1
  15,2,VACCINATION,SPECIALIST,3
  16,3,CONSULTATION,RADIOLOGIST,2
  17,3,EMERGENCY,LABORATORY,1
  18,3,EMERGENCY,NURSE,2
  19,3,EXAM,GENERAL_PRACTITIONER,1
  20,3,FOLLOW_UP,LABORATORY,1
  21,3,FOLLOW_UP,NURSE,2
  22,3,FOLLOW_UP,SPECIALIST,1
  23,3,VACCINATION,RADIOLOGIST,1
  24,4,CONSULTATION,RADIOLOGIST,1
  25,4,EMERGENCY,GENERAL_PRACTITIONER,1
  26,4,EMERGENCY,NURSE,1
  27,4,EXAM,SPECIALIST,1
  28,4,FOLLOW_UP,GENERAL_PRACTITIONER,1
  29,4,FOLLOW_UP,NURSE,1
  30,4,VACCINATION,LABORATORY,2
  31,4,VACCINATION,RADIOLOGIST,2
  32,4,VACCINATION,SPECIALIST,1
  33,5,CONSULTATION,GENERAL_PRACTITIONER,2
  34,5,EMERGENCY,GENERAL_PRACTITIONER,3
  35,5,EMERGENCY,NURSE,1
  36,5,EXAM,LABORATORY,1
  37,5,EXAM,RADIOLOGIST,3
  38,5,FOLLOW_UP,GENERAL_PRACTITIONER,1
  39,5,FOLLOW_UP,RADIOLOGIST,1
  40,5,VACCINATION,SPECIALIST,1
  41,6,CONSULTATION,RADIOLOGIST,1
  42,6,CONSULTATION,SPECIALIST,1
  43,6,EMERGENCY,GENERAL_PRACTITIONER,1
  44,6,EMERGENCY,LABORATORY,1
  45,6,EMERGENCY,NURSE,2
  46,6,VACCINATION,GENERAL_PRACTITIONER,2
  47,6,VACCINATION,LABORATORY,1
  48,6,VACCINATION,RADIOLOGIST,1
  49,6,VACCINATION,SPECIALIST,1
  50,7,CONSULTATION,NURSE,1
  51,7,CONSULTATION,RADIOLOGIST,2
  52,7,FOLLOW_UP,GENERAL_PRACTITIONER,1
  53,7,FOLLOW_UP,SPECIALIST,1
  54,7,VACCINATION,NURSE,1
  55,8,CONSULTATION,LABORATORY,1
  56,8,FOLLOW_UP,GENERAL_PRACTITIONER,1
  57,8,FOLLOW_UP,NURSE,1
  58,8,VACCINATION,NURSE,1
  59,9,CONSULTATION,GENERAL_PRACTITIONER,1
  60,9,CONSULTATION,RADIOLOGIST,1
  61,9,FOLLOW_UP,LABORATORY,2
  62,9,FOLLOW_UP,NURSE,2
  63,9,VACCINATION,LABORATORY,1
  64,10,CONSULTATION,GENERAL_PRACTITIONER,1
  65,10,CONSULTATION,LABORATORY,1
  66,10,EMERGENCY,SPECIALIST,2
  67,10,EXAM,GENERAL_PRACTITIONER,1
  68,10,EXAM,NURSE,1
  69,10,EXAM,SPECIALIST,2
  70,10,FOLLOW_UP,RADIOLOGIST,1
  71,10,FOLLOW_UP,SPECIALIST,1
  72,10,VACCINATION,NURSE,1
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-interval]
  '''
  ,patient_id,medication,administration_route,dosage,__TIME_SPENT__
  0,1,ANTIBIOTIC,ORAL,2,24.0
  1,1,ANTICOAGULANT,CUTANEOUS,1,16.0
  2,1,ANTICOAGULANT,INTRAVENOUS,3,11.0
  3,1,ANTIHYPERTENSIVE,INTRAVENOUS,3,7.0
  4,2,ANTIBIOTIC,CUTANEOUS,3,11.0
  5,2,ANTIBIOTIC,INHALATION,1,15.0
  6,2,ANTIBIOTIC,ORAL,2,29.0
  7,2,ANTIHYPERTENSIVE,INHALATION,2,22.0
  8,2,PAIN_RELIEVER,INTRAVENOUS,1,12.0
  9,3,ANTIBIOTIC,INHALATION,3,9.0
  10,3,ANTIHYPERTENSIVE,ORAL,2,23.0
  11,3,PAIN_RELIEVER,ORAL,2,27.0
  12,4,ANTIBIOTIC,ORAL,3,27.0
  13,4,ANTICOAGULANT,INTRAMUSCULAR,2,8.0
  14,4,ANTICOAGULANT,ORAL,1,19.0
  15,4,CORTICOSTEROID,INHALATION,3,11.0
  16,4,CORTICOSTEROID,INTRAVENOUS,2,28.0
  17,4,PAIN_RELIEVER,INTRAMUSCULAR,3,11.0
  18,5,ANTIBIOTIC,CUTANEOUS,2,12.0
  19,5,ANTIHYPERTENSIVE,INHALATION,2,21.0
  20,5,ANTIHYPERTENSIVE,INTRAVENOUS,1,18.0
  21,5,CORTICOSTEROID,CUTANEOUS,2,17.0
  22,5,PAIN_RELIEVER,INTRAMUSCULAR,2,24.0
  23,6,ANTIBIOTIC,INTRAMUSCULAR,1,30.0
  24,6,ANTIHYPERTENSIVE,INHALATION,2,16.0
  25,6,ANTIHYPERTENSIVE,INTRAMUSCULAR,1,8.0
  26,6,CORTICOSTEROID,CUTANEOUS,1,29.0
  27,6,CORTICOSTEROID,INHALATION,1,25.0
  28,6,CORTICOSTEROID,INHALATION,2,9.0
  29,6,CORTICOSTEROID,INTRAVENOUS,3,17.0
  30,7,ANTICOAGULANT,INTRAMUSCULAR,2,15.0
  31,7,PAIN_RELIEVER,INHALATION,3,23.0
  32,8,ANTIBIOTIC,ORAL,3,26.0
  33,8,ANTICOAGULANT,INHALATION,2,17.0
  34,8,CORTICOSTEROID,ORAL,3,9.0
  35,8,PAIN_RELIEVER,CUTANEOUS,3,26.0
  36,8,PAIN_RELIEVER,INHALATION,2,30.0
  37,9,ANTIBIOTIC,CUTANEOUS,3,14.0
  38,9,ANTIBIOTIC,ORAL,1,18.0
  39,9,ANTICOAGULANT,INTRAMUSCULAR,3,24.0
  40,9,PAIN_RELIEVER,INTRAVENOUS,1,10.0
  41,10,ANTIBIOTIC,INTRAVENOUS,3,30.0
  42,10,ANTICOAGULANT,INTRAMUSCULAR,2,12.0
  43,10,ANTICOAGULANT,INTRAVENOUS,2,29.0
  44,10,ANTIHYPERTENSIVE,INHALATION,2,7.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent[True-state]
  '''
  ,patient_id,health_state,condition,__TIME_SPENT__
  0,1,HEALTHY,DIGESTIVE,349.0
  1,2,CHRONIC_MONITORING,CARDIAC,15.0
  2,2,HEALTHY,CARDIAC,349.0
  3,3,CHRONIC_MONITORING,NEUROLOGICAL,254.0
  4,3,CONVALESCENCE,CARDIAC,94.0
  5,3,REMISSION,CARDIAC,16.0
  6,4,CHRONIC_MONITORING,NEUROLOGICAL,158.0
  7,4,REMISSION,DIGESTIVE,149.0
  8,5,CHRONIC_MONITORING,DIGESTIVE,15.0
  9,5,CONVALESCENCE,DIGESTIVE,349.0
  10,6,CONVALESCENCE,DIGESTIVE,17.0
  11,6,REMISSION,DIGESTIVE,67.0
  12,6,TREATMENT,DIGESTIVE,120.0
  13,6,TREATMENT,RESPIRATORY,160.0
  14,7,HEALTHY,DIGESTIVE,148.0
  15,7,HEALTHY,RESPIRATORY,147.0
  16,7,REMISSION,RESPIRATORY,17.0
  17,7,TREATMENT,NEUROLOGICAL,52.0
  18,8,CONVALESCENCE,RESPIRATORY,349.0
  19,9,CONVALESCENCE,DIGESTIVE,349.0
  20,10,CHRONIC_MONITORING,NEUROLOGICAL,15.0
  21,10,HEALTHY,DIGESTIVE,349.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-event-entity_features0]
  '''
  ,provider,__TIME_SPENT__
  0,GENERAL_PRACTITIONER,20
  1,LABORATORY,14
  2,NURSE,21
  3,RADIOLOGIST,22
  4,SPECIALIST,18
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-interval-entity_features2]
  '''
  ,medication,administration_route,__TIME_SPENT__
  0,ANTIBIOTIC,CUTANEOUS,37.0
  1,ANTIBIOTIC,INHALATION,24.0
  2,ANTIBIOTIC,INTRAMUSCULAR,30.0
  3,ANTIBIOTIC,INTRAVENOUS,30.0
  4,ANTIBIOTIC,ORAL,124.0
  5,ANTICOAGULANT,CUTANEOUS,16.0
  6,ANTICOAGULANT,INHALATION,17.0
  7,ANTICOAGULANT,INTRAMUSCULAR,59.0
  8,ANTICOAGULANT,INTRAVENOUS,40.0
  9,ANTICOAGULANT,ORAL,19.0
  10,ANTIHYPERTENSIVE,INHALATION,66.0
  11,ANTIHYPERTENSIVE,INTRAMUSCULAR,8.0
  12,ANTIHYPERTENSIVE,INTRAVENOUS,25.0
  13,ANTIHYPERTENSIVE,ORAL,23.0
  14,CORTICOSTEROID,CUTANEOUS,46.0
  15,CORTICOSTEROID,INHALATION,45.0
  16,CORTICOSTEROID,INTRAVENOUS,45.0
  17,CORTICOSTEROID,ORAL,9.0
  18,PAIN_RELIEVER,CUTANEOUS,26.0
  19,PAIN_RELIEVER,INHALATION,53.0
  20,PAIN_RELIEVER,INTRAMUSCULAR,35.0
  21,PAIN_RELIEVER,INTRAVENOUS,22.0
  22,PAIN_RELIEVER,ORAL,27.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[False-state-entity_features1]
  '''
  ,health_state,__TIME_SPENT__
  0,CHRONIC_MONITORING,457.0
  1,CONVALESCENCE,1158.0
  2,HEALTHY,1342.0
  3,REMISSION,249.0
  4,TREATMENT,332.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-event-entity_features0]
  '''
  ,patient_id,provider,__TIME_SPENT__
  0,1,LABORATORY,1
  1,1,NURSE,3
  2,1,RADIOLOGIST,2
  3,1,SPECIALIST,1
  4,2,GENERAL_PRACTITIONER,3
  5,2,LABORATORY,1
  6,2,NURSE,1
  7,2,RADIOLOGIST,4
  8,2,SPECIALIST,5
  9,3,GENERAL_PRACTITIONER,1
  10,3,LABORATORY,2
  11,3,NURSE,4
  12,3,RADIOLOGIST,3
  13,3,SPECIALIST,1
  14,4,GENERAL_PRACTITIONER,2
  15,4,LABORATORY,2
  16,4,NURSE,2
  17,4,RADIOLOGIST,3
  18,4,SPECIALIST,2
  19,5,GENERAL_PRACTITIONER,6
  20,5,LABORATORY,1
  21,5,NURSE,1
  22,5,RADIOLOGIST,4
  23,5,SPECIALIST,1
  24,6,GENERAL_PRACTITIONER,3
  25,6,LABORATORY,2
  26,6,NURSE,2
  27,6,RADIOLOGIST,2
  28,6,SPECIALIST,2
  29,7,GENERAL_PRACTITIONER,1
  30,7,NURSE,2
  31,7,RADIOLOGIST,2
  32,7,SPECIALIST,1
  33,8,GENERAL_PRACTITIONER,1
  34,8,LABORATORY,1
  35,8,NURSE,2
  36,9,GENERAL_PRACTITIONER,1
  37,9,LABORATORY,3
  38,9,NURSE,2
  39,9,RADIOLOGIST,1
  40,10,GENERAL_PRACTITIONER,2
  41,10,LABORATORY,1
  42,10,NURSE,2
  43,10,RADIOLOGIST,1
  44,10,SPECIALIST,5
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-interval-entity_features2]
  '''
  ,patient_id,medication,administration_route,__TIME_SPENT__
  0,1,ANTIBIOTIC,ORAL,24.0
  1,1,ANTICOAGULANT,CUTANEOUS,16.0
  2,1,ANTICOAGULANT,INTRAVENOUS,11.0
  3,1,ANTIHYPERTENSIVE,INTRAVENOUS,7.0
  4,2,ANTIBIOTIC,CUTANEOUS,11.0
  5,2,ANTIBIOTIC,INHALATION,15.0
  6,2,ANTIBIOTIC,ORAL,29.0
  7,2,ANTIHYPERTENSIVE,INHALATION,22.0
  8,2,PAIN_RELIEVER,INTRAVENOUS,12.0
  9,3,ANTIBIOTIC,INHALATION,9.0
  10,3,ANTIHYPERTENSIVE,ORAL,23.0
  11,3,PAIN_RELIEVER,ORAL,27.0
  12,4,ANTIBIOTIC,ORAL,27.0
  13,4,ANTICOAGULANT,INTRAMUSCULAR,8.0
  14,4,ANTICOAGULANT,ORAL,19.0
  15,4,CORTICOSTEROID,INHALATION,11.0
  16,4,CORTICOSTEROID,INTRAVENOUS,28.0
  17,4,PAIN_RELIEVER,INTRAMUSCULAR,11.0
  18,5,ANTIBIOTIC,CUTANEOUS,12.0
  19,5,ANTIHYPERTENSIVE,INHALATION,21.0
  20,5,ANTIHYPERTENSIVE,INTRAVENOUS,18.0
  21,5,CORTICOSTEROID,CUTANEOUS,17.0
  22,5,PAIN_RELIEVER,INTRAMUSCULAR,24.0
  23,6,ANTIBIOTIC,INTRAMUSCULAR,30.0
  24,6,ANTIHYPERTENSIVE,INHALATION,16.0
  25,6,ANTIHYPERTENSIVE,INTRAMUSCULAR,8.0
  26,6,CORTICOSTEROID,CUTANEOUS,29.0
  27,6,CORTICOSTEROID,INHALATION,34.0
  28,6,CORTICOSTEROID,INTRAVENOUS,17.0
  29,7,ANTICOAGULANT,INTRAMUSCULAR,15.0
  30,7,PAIN_RELIEVER,INHALATION,23.0
  31,8,ANTIBIOTIC,ORAL,26.0
  32,8,ANTICOAGULANT,INHALATION,17.0
  33,8,CORTICOSTEROID,ORAL,9.0
  34,8,PAIN_RELIEVER,CUTANEOUS,26.0
  35,8,PAIN_RELIEVER,INHALATION,30.0
  36,9,ANTIBIOTIC,CUTANEOUS,14.0
  37,9,ANTIBIOTIC,ORAL,18.0
  38,9,ANTICOAGULANT,INTRAMUSCULAR,24.0
  39,9,PAIN_RELIEVER,INTRAVENOUS,10.0
  40,10,ANTIBIOTIC,INTRAVENOUS,30.0
  41,10,ANTICOAGULANT,INTRAMUSCULAR,12.0
  42,10,ANTICOAGULANT,INTRAVENOUS,29.0
  43,10,ANTIHYPERTENSIVE,INHALATION,7.0
  
  '''
# ---
# name: TestTransformationMethod.test_to_time_spent_with_entity_features[True-state-entity_features1]
  '''
  ,patient_id,health_state,__TIME_SPENT__
  0,1,HEALTHY,349.0
  1,2,CHRONIC_MONITORING,15.0
  2,2,HEALTHY,349.0
  3,3,CHRONIC_MONITORING,254.0
  4,3,CONVALESCENCE,94.0
  5,3,REMISSION,16.0
  6,4,CHRONIC_MONITORING,158.0
  7,4,REMISSION,149.0
  8,5,CHRONIC_MONITORING,15.0
  9,5,CONVALESCENCE,349.0
  10,6,CONVALESCENCE,17.0
  11,6,REMISSION,67.0
  12,6,TREATMENT,280.0
  13,7,HEALTHY,295.0
  14,7,REMISSION,17.0
  15,7,TREATMENT,52.0
  16,8,CONVALESCENCE,349.0
  17,9,CONVALESCENCE,349.0
  18,10,CHRONIC_MONITORING,15.0
  19,10,HEALTHY,349.0
  
  '''
# ---
